--- a/locales/pl.schema.json
+++ b/locales/pl.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "Drugi obraz"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Góra"
-          },
-          "options__2": {
-            "label": "Do środka"
-          },
-          "options__3": {
-            "label": "Dół"
-          },
-          "label": "Pozycja tekstu na pulpicie"
-        },
         "color_scheme": {
           "options__1": {
             "label": "Akcent 1"
@@ -729,7 +717,7 @@
             "label": "Odwrócone"
           },
           "label": "Kolorystyka",
-          "info": "Wykorzystuje się do pola tekstowego."
+          "info": "Widoczne podczas wyświetlania kontenera."
         },
         "stack_images_on_mobile": {
           "label": "Układaj obrazy w stosy na urządzeniu mobilnym"
@@ -739,7 +727,7 @@
           "info": "Nadpisuje ustawienie wysokości banera obrazu, jeżeli jest zaznaczone."
         },
         "show_text_box": {
-          "label": "Pokaż pole tekstowe na pulpicie"
+          "label": "Pokaż kontener na komputerze"
         },
         "image_overlay_opacity": {
           "label": "Nieprzezroczystość nakładki obrazu"
@@ -748,7 +736,7 @@
           "content": "Układ na urządzeniu mobilnym"
         },
         "show_text_below": {
-          "label": "Pokaż tekst pod obrazami"
+          "label": "Pokaż kontener na urządzeniu mobilnym"
         },
         "image_height": {
           "label": "Wysokość banera",
@@ -762,6 +750,60 @@
             "label": "Duży"
           },
           "info": "Aby uzyskać najlepszy efekt, użyj obrazu o współczynniku proporcji 2:3. [Dowiedz się więcej](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Do góry, do lewej"
+          },
+          "options__2": {
+            "label": "Do góry, wyśrodkowany"
+          },
+          "options__3": {
+            "label": "Do góry, do prawej"
+          },
+          "options__4": {
+            "label": "Do środka, do lewej"
+          },
+          "options__5": {
+            "label": "Do środka, wyśrodkowany"
+          },
+          "options__6": {
+            "label": "Do środka, do prawej"
+          },
+          "options__7": {
+            "label": "Na dole, do lewej"
+          },
+          "options__8": {
+            "label": "Na dole, pośrodku"
+          },
+          "options__9": {
+            "label": "Na dole, do prawej"
+          },
+          "label": "Pozycja treści na pulpicie"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Lewa strona"
+          },
+          "options__2": {
+            "label": "Środek"
+          },
+          "options__3": {
+            "label": "Prawa strona"
+          },
+          "label": "Wyrównanie treści na pulpicie"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Lewa strona"
+          },
+          "options__2": {
+            "label": "Środek"
+          },
+          "options__3": {
+            "label": "Prawa strona"
+          },
+          "label": "Wyrównanie treści na urządzeniu mobilnym"
         }
       },
       "blocks": {
@@ -787,6 +829,18 @@
           "settings": {
             "text": {
               "label": "Opis"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Tekst podstawowy"
+              },
+              "options__2": {
+                "label": "Podtytuł"
+              },
+              "options__3": {
+                "label": "Duże litery"
+              },
+              "label": "Styl tekstu"
             }
           }
         },
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "Wyświetl zdjęcie tła"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Góra"
-          },
-          "options__2": {
-            "label": "Środek"
-          },
-          "options__3": {
-            "label": "Dół"
-          },
-          "label": "Pozycja tekstu na pulpicie"
-        },
         "show_text_box": {
-          "label": "Pokaż pole tekstowe na pulpicie"
+          "label": "Pokaż kontener na komputerze"
         },
         "image_overlay_opacity": {
           "label": "Nieprzezroczystość nakładki obrazu"
@@ -1937,10 +1979,11 @@
             "label": "Odwrócone"
           },
           "label": "Kolorystyka",
-          "info": "Widoczne podczas wyświetlania pola tekstowego"
+          "info": "Widoczne podczas wyświetlania kontenera"
         },
         "show_text_below": {
-          "label": "Wyświetl tekst pod obrazami na urządzeniu mobilnym"
+          "label": "Pokaż treść pod obrazami na urządzeniu mobilnym",
+          "info": "Aby uzyskać najlepsze wyniki, użyj obrazu o współczynniku proporcji 16:9. [Dowiedz się więcej](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "Wysokość banera",
@@ -1957,6 +2000,63 @@
             "label": "Duży"
           },
           "info": "Aby uzyskać najlepsze wyniki, użyj obrazu o współczynniku proporcji 16:9. [Dowiedz się więcej](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__4": {
+            "label": "Do środka, do lewej"
+          },
+          "options__5": {
+            "label": "Do środka, wyśrodkowany"
+          },
+          "options__6": {
+            "label": "Do środka, do prawej"
+          },
+          "options__7": {
+            "label": "Na dole, do lewej"
+          },
+          "options__8": {
+            "label": "Na dole, pośrodku"
+          },
+          "options__9": {
+            "label": "Na dole, do prawej"
+          },
+          "options__1": {
+            "label": "Do góry, do lewej"
+          },
+          "options__2": {
+            "label": "Do góry, wyśrodkowany"
+          },
+          "options__3": {
+            "label": "Do góry, do prawej"
+          },
+          "label": "Pozycja treści na pulpicie"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Lewa strona"
+          },
+          "options__2": {
+            "label": "Środek"
+          },
+          "options__3": {
+            "label": "Prawa strona"
+          },
+          "label": "Wyrównanie treści na komputerze"
+        },
+        "header": {
+          "content": "Układ na urządzeniu mobilnym"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Lewa strona"
+          },
+          "options__2": {
+            "label": "Środek"
+          },
+          "options__3": {
+            "label": "Prawa strona"
+          },
+          "label": "Wyrównanie treści na urządzeniu mobilnym"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "Opis"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Tekst podstawowy"
+              },
+              "options__2": {
+                "label": "Podtytuł"
+              },
+              "label": "Styl tekstu"
             }
           }
         },
@@ -1982,6 +2091,184 @@
       },
       "presets": {
         "name": "Baner rejestracji w celu otrzymywania e-maili"
+      }
+    },
+    "slideshow": {
+      "name": "Pokaz slajdów",
+      "settings": {
+        "layout": {
+          "label": "Układ",
+          "options__1": {
+            "label": "Pełna szerokość"
+          },
+          "options__2": {
+            "label": "Siatka"
+          }
+        },
+        "slide_height": {
+          "label": "Wysokość slajdu",
+          "options__1": {
+            "label": "Dostosuj do pierwszego obrazu"
+          },
+          "options__2": {
+            "label": "Mały"
+          },
+          "options__3": {
+            "label": "Średni"
+          },
+          "options__4": {
+            "label": "Duży"
+          }
+        },
+        "slider_visual": {
+          "label": "Styl paginacji",
+          "options__1": {
+            "label": "Licznik"
+          },
+          "options__2": {
+            "label": "Kropki"
+          },
+          "options__3": {
+            "label": "Liczby"
+          }
+        },
+        "auto_rotate": {
+          "label": "Automatycznie obracaj slajdy"
+        },
+        "change_slides_speed": {
+          "label": "Zmieniaj slajdy co"
+        },
+        "show_text_below": {
+          "label": "Pokaż treść pod obrazami na urządzeniu mobilnym"
+        },
+        "mobile": {
+          "content": "Układ na urządzeniu mobilnym"
+        },
+        "accessibility": {
+          "content": "Dostępność",
+          "label": "Opis pokazu slajdów",
+          "info": "Opisz film tak dla klientów korzystających z czytników ekranu."
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "Slajd",
+          "settings": {
+            "image": {
+              "label": "Obraz"
+            },
+            "heading": {
+              "label": "Nagłówek"
+            },
+            "subheading": {
+              "label": "Nagłówek podrzędny"
+            },
+            "button_label": {
+              "label": "Przycisk z etykietą",
+              "info": "Pozostaw etykietę pustą, aby ukryć przycisk."
+            },
+            "link": {
+              "label": "Link przycisku"
+            },
+            "secondary_style": {
+              "label": "Użyj stylu przycisku konspektu"
+            },
+            "heading_size": {
+              "label": "Rozmiar nagłówka",
+              "options__1": {
+                "label": "Mały"
+              },
+              "options__2": {
+                "label": "Średni"
+              },
+              "options__3": {
+                "label": "Duży"
+              }
+            },
+            "box_align": {
+              "label": "Pozycja treści na pulpicie",
+              "options__1": {
+                "label": "Do góry, do lewej"
+              },
+              "options__2": {
+                "label": "Do góry, wyśrodkowany"
+              },
+              "options__3": {
+                "label": "Do góry, do prawej"
+              },
+              "options__4": {
+                "label": "Do środka, do lewej"
+              },
+              "options__5": {
+                "label": "Do środka, wyśrodkowany"
+              },
+              "options__6": {
+                "label": "Do środka, do prawej"
+              },
+              "options__7": {
+                "label": "Lewy dolny"
+              },
+              "options__8": {
+                "label": "Na dole, pośrodku"
+              },
+              "options__9": {
+                "label": "Prawy dolny"
+              }
+            },
+            "show_text_box": {
+              "label": "Pokaż kontener na komputerze"
+            },
+            "text_alignment": {
+              "label": "Wyrównanie treści na komputerze",
+              "option_1": {
+                "label": "Lewa strona"
+              },
+              "option_2": {
+                "label": "Środek"
+              },
+              "option_3": {
+                "label": "Prawa strona"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "Nieprzezroczystość nakładki obrazu"
+            },
+            "color_scheme": {
+              "info": "Widoczne podczas wyświetlania kontenera.",
+              "options__1": {
+                "label": "Akcent 1"
+              },
+              "options__2": {
+                "label": "Akcent 2"
+              },
+              "options__3": {
+                "label": "Tło 1"
+              },
+              "options__4": {
+                "label": "Tło 2"
+              },
+              "options__5": {
+                "label": "Odwrócone"
+              },
+              "label": "Kolorystyka"
+            },
+            "text_alignment_mobile": {
+              "label": "Wyrównanie treści na urządzeniu mobilnym",
+              "options__1": {
+                "label": "Lewa strona"
+              },
+              "options__2": {
+                "label": "Środek"
+              },
+              "options__3": {
+                "label": "Prawa strona"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "Pokaz slajdów"
       }
     }
   }
