--- a/locales/cs.schema.json
+++ b/locales/cs.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "Druhý obrázek"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Nahoře"
-          },
-          "options__2": {
-            "label": "Uprostřed"
-          },
-          "options__3": {
-            "label": "Dole"
-          },
-          "label": "Pozice textu na desktopu"
-        },
         "color_scheme": {
           "options__1": {
             "label": "Zvýraznění 1"
@@ -729,7 +717,7 @@
             "label": "Inverze"
           },
           "label": "Barevné schéma",
-          "info": "Používá se pro textové pole."
+          "info": "Zobrazuje se v případě, že se zobrazuje kontejner."
         },
         "stack_images_on_mobile": {
           "label": "Zobrazit obrázky na mobilním zařízení nad sebou"
@@ -739,7 +727,7 @@
           "info": "Pokud je tato možnost zaškrtnuta, přepíše nastavení výšky obrázkového banneru."
         },
         "show_text_box": {
-          "label": "Zobrazit textové pole na počítači"
+          "label": "Zobrazit kontejner na počítači"
         },
         "image_overlay_opacity": {
           "label": "Neprůhlednost překryvu obrázku"
@@ -748,7 +736,7 @@
           "content": "Mobilní rozvržení"
         },
         "show_text_below": {
-          "label": "Zobrazit text pod obrázky"
+          "label": "Zobrazit kontejner na mobilním zařízení"
         },
         "image_height": {
           "label": "Výška banneru",
@@ -762,6 +750,60 @@
             "label": "Velká"
           },
           "info": "Nejlepších výsledků dosáhnete použitím obrázku s poměrem stran 3:2. [Zjistit více](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Nahoře vlevo"
+          },
+          "options__2": {
+            "label": "Nahoře ve středu"
+          },
+          "options__3": {
+            "label": "Nahoře vpravo"
+          },
+          "options__4": {
+            "label": "Uprostřed vlevo"
+          },
+          "options__5": {
+            "label": "Uprostřed ve středu"
+          },
+          "options__6": {
+            "label": "Uprostřed vpravo"
+          },
+          "options__7": {
+            "label": "Dole vlevo"
+          },
+          "options__8": {
+            "label": "Dole ve středu"
+          },
+          "options__9": {
+            "label": "Dole vpravo"
+          },
+          "label": "Pozice obsahu na počítači"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Doleva"
+          },
+          "options__2": {
+            "label": "Na střed"
+          },
+          "options__3": {
+            "label": "Doprava"
+          },
+          "label": "Zarovnání obsahu na počítači"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Doleva"
+          },
+          "options__2": {
+            "label": "Na střed"
+          },
+          "options__3": {
+            "label": "Doprava"
+          },
+          "label": "Zarovnání obsahu v mobilním prostředí"
         }
       },
       "blocks": {
@@ -787,6 +829,18 @@
           "settings": {
             "text": {
               "label": "Popis"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Hlavní část"
+              },
+              "options__2": {
+                "label": "Podtitul"
+              },
+              "options__3": {
+                "label": "Velká písmena"
+              },
+              "label": "Textový styl"
             }
           }
         },
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "Zobrazit obrázek na pozadí"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Nahoře"
-          },
-          "options__2": {
-            "label": "Uprostřed"
-          },
-          "options__3": {
-            "label": "Dole"
-          },
-          "label": "Pozice textu na počítači"
-        },
         "show_text_box": {
-          "label": "Zobrazit textové pole na počítači"
+          "label": "Zobrazit kontejner na počítači"
         },
         "image_overlay_opacity": {
           "label": "Neprůhlednost překryvu obrázku"
@@ -1937,10 +1979,11 @@
             "label": "Inverzní"
           },
           "label": "Barevné schéma",
-          "info": "Viditelnost při zobrazeném textovém poli"
+          "info": "Zobrazuje se v případě, že se zobrazuje kontejner."
         },
         "show_text_below": {
-          "label": "Na mobilu zobrazovat text pod obrázkem"
+          "label": "Na mobilním zařízení zobrazovat obsah pod obrázkem",
+          "info": "Nejlepších výsledků dosáhnete použitím obrázku s poměrem stran 16:9. [Zjistit více](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "Výška banneru",
@@ -1957,6 +2000,63 @@
             "label": "Velká"
           },
           "info": "Nejlepších výsledků dosáhnete použitím obrázku s poměrem stran 16:9. [Zjistit více](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Nahoře vlevo"
+          },
+          "options__2": {
+            "label": "Nahoře ve středu"
+          },
+          "options__3": {
+            "label": "Nahoře vpravo"
+          },
+          "options__4": {
+            "label": "Uprostřed vlevo"
+          },
+          "options__5": {
+            "label": "Uprostřed ve středu"
+          },
+          "options__6": {
+            "label": "Uprostřed vpravo"
+          },
+          "options__7": {
+            "label": "Dole vlevo"
+          },
+          "options__8": {
+            "label": "Dole ve středu"
+          },
+          "options__9": {
+            "label": "Dole vpravo"
+          },
+          "label": "Pozice obsahu na počítači"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Doleva"
+          },
+          "options__2": {
+            "label": "Na střed"
+          },
+          "options__3": {
+            "label": "Doprava"
+          },
+          "label": "Zarovnání obsahu na počítači"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Doleva"
+          },
+          "options__2": {
+            "label": "Na střed"
+          },
+          "options__3": {
+            "label": "Doprava"
+          },
+          "label": "Zarovnání obsahu v mobilním prostředí"
+        },
+        "header": {
+          "content": "Mobilní rozvržení"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "Popis"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Hlavní část"
+              },
+              "options__2": {
+                "label": "Podtitul"
+              },
+              "label": "Textový styl"
             }
           }
         },
@@ -1982,6 +2091,184 @@
       },
       "presets": {
         "name": "Banner přihlášení k odběru e-mailů"
+      }
+    },
+    "slideshow": {
+      "name": "Prezentace",
+      "settings": {
+        "layout": {
+          "label": "Rozvržení",
+          "options__1": {
+            "label": "Plná šířka"
+          },
+          "options__2": {
+            "label": "Mřížka"
+          }
+        },
+        "slide_height": {
+          "label": "Výška snímku",
+          "options__1": {
+            "label": "Přizpůsobení prvnímu obrázku"
+          },
+          "options__2": {
+            "label": "Malá"
+          },
+          "options__3": {
+            "label": "Střední"
+          },
+          "options__4": {
+            "label": "Velká"
+          }
+        },
+        "slider_visual": {
+          "label": "Styl stránkování",
+          "options__1": {
+            "label": "Počítadlo"
+          },
+          "options__2": {
+            "label": "Tečky"
+          },
+          "options__3": {
+            "label": "Čísla"
+          }
+        },
+        "auto_rotate": {
+          "label": "Automaticky otočit snímky"
+        },
+        "change_slides_speed": {
+          "label": "Změnit snímek co"
+        },
+        "show_text_below": {
+          "label": "Na mobilním zařízení zobrazovat obsah pod obrázky"
+        },
+        "mobile": {
+          "content": "Mobilní rozvržení"
+        },
+        "accessibility": {
+          "content": "Přístupnost",
+          "label": "Popis prezentace",
+          "info": "Popište prezentaci pro zákazníky používající čtečky obrazovky."
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "Snímek",
+          "settings": {
+            "image": {
+              "label": "Obrázek"
+            },
+            "heading": {
+              "label": "Nadpis"
+            },
+            "subheading": {
+              "label": "Podnadpis"
+            },
+            "button_label": {
+              "label": "Text tlačítka",
+              "info": "Pokud chcete tlačítko skrýt, nezadávejte žádný text."
+            },
+            "link": {
+              "label": "Tlačítkový odkaz"
+            },
+            "secondary_style": {
+              "label": "Použít styl tlačítka s obrysem"
+            },
+            "heading_size": {
+              "label": "Velikost nadpisu",
+              "options__1": {
+                "label": "Malá"
+              },
+              "options__2": {
+                "label": "Střední"
+              },
+              "options__3": {
+                "label": "Velká"
+              }
+            },
+            "box_align": {
+              "label": "Pozice obsahu na počítači",
+              "options__1": {
+                "label": "Nahoře vlevo"
+              },
+              "options__2": {
+                "label": "Nahoře ve středu"
+              },
+              "options__3": {
+                "label": "Nahoře vpravo"
+              },
+              "options__4": {
+                "label": "Uprostřed vlevo"
+              },
+              "options__5": {
+                "label": "Uprostřed ve středu"
+              },
+              "options__6": {
+                "label": "Uprostřed vpravo"
+              },
+              "options__7": {
+                "label": "Dole vlevo"
+              },
+              "options__8": {
+                "label": "Dole ve středu"
+              },
+              "options__9": {
+                "label": "Dole vpravo"
+              }
+            },
+            "show_text_box": {
+              "label": "Zobrazit kontejner na počítači"
+            },
+            "text_alignment": {
+              "label": "Zarovnání obsahu na počítači",
+              "option_1": {
+                "label": "Doleva"
+              },
+              "option_2": {
+                "label": "Na střed"
+              },
+              "option_3": {
+                "label": "Doprava"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "Neprůhlednost překryvu obrázku"
+            },
+            "color_scheme": {
+              "info": "Zobrazuje se v případě, že se zobrazuje kontejner.",
+              "options__1": {
+                "label": "Zvýraznění 1"
+              },
+              "options__2": {
+                "label": "Zvýraznění 2"
+              },
+              "options__3": {
+                "label": "Pozadí 1"
+              },
+              "options__4": {
+                "label": "Pozadí 2"
+              },
+              "options__5": {
+                "label": "Inverze"
+              },
+              "label": "Barevné schéma"
+            },
+            "text_alignment_mobile": {
+              "label": "Zarovnání obsahu v mobilním prostředí",
+              "options__1": {
+                "label": "Doleva"
+              },
+              "options__2": {
+                "label": "Na střed"
+              },
+              "options__3": {
+                "label": "Doprava"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "Prezentace"
       }
     }
   }
