--- a/locales/da.schema.json
+++ b/locales/da.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "Andet billede"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Top"
-          },
-          "options__2": {
-            "label": "Centreret"
-          },
-          "options__3": {
-            "label": "Bund"
-          },
-          "label": "Placering af tekst på skrivebordet"
-        },
         "color_scheme": {
           "options__1": {
             "label": "Markering 1"
@@ -729,7 +717,7 @@
             "label": "Omvendt"
           },
           "label": "Farveskema",
-          "info": "Bruges til tekstfelt."
+          "info": "Synlig, når containeren vises."
         },
         "stack_images_on_mobile": {
           "label": "Stabl billeder på mobilenheder"
@@ -739,7 +727,7 @@
           "info": "Overskriver indstillingerne for højden på billedbanneret, når det markeres."
         },
         "show_text_box": {
-          "label": "Vis tekstfelt på skrivebord"
+          "label": "Vis container på skrivebord"
         },
         "image_overlay_opacity": {
           "label": "Billedoverlejringens uigennemsigtighed"
@@ -748,7 +736,7 @@
           "content": "Mobillayout"
         },
         "show_text_below": {
-          "label": "Vis tekster under billeder"
+          "label": "Vis container på mobiltelefon"
         },
         "image_height": {
           "label": "Bannerhøjde",
@@ -762,6 +750,60 @@
             "label": "Stor"
           },
           "info": "Brug et billede med et højde-bredde-forhold på 3:2 for at opnå det bedste resultat. [Få mere at vide](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Øverst til venstre"
+          },
+          "options__2": {
+            "label": "Øverst i midten"
+          },
+          "options__3": {
+            "label": "Øverst til højre"
+          },
+          "options__4": {
+            "label": "Midt på til venstre"
+          },
+          "options__5": {
+            "label": "Midt på centreret"
+          },
+          "options__6": {
+            "label": "Midt på til højre"
+          },
+          "options__7": {
+            "label": "Nederst til venstre"
+          },
+          "options__8": {
+            "label": "Nederst i midten"
+          },
+          "options__9": {
+            "label": "Nederst til højre"
+          },
+          "label": "Placering af indhold på computer"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Venstre"
+          },
+          "options__2": {
+            "label": "Centreret"
+          },
+          "options__3": {
+            "label": "Højre"
+          },
+          "label": "Justering af indhold på computer"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Venstre"
+          },
+          "options__2": {
+            "label": "Centreret"
+          },
+          "options__3": {
+            "label": "Højre"
+          },
+          "label": "Justering af indhold på mobil"
         }
       },
       "blocks": {
@@ -787,6 +829,18 @@
           "settings": {
             "text": {
               "label": "Beskrivelse"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Brødtekst"
+              },
+              "options__2": {
+                "label": "Undertekst"
+              },
+              "options__3": {
+                "label": "Store bogstaver"
+              },
+              "label": "Teksttypografi"
             }
           }
         },
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "Vis baggrundsbillede"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Top"
-          },
-          "options__2": {
-            "label": "Centreret"
-          },
-          "options__3": {
-            "label": "Bund"
-          },
-          "label": "Placering af tekst på skrivebordet"
-        },
         "show_text_box": {
-          "label": "Vis tekstfelt på skrivebord"
+          "label": "Vis container på skrivebord"
         },
         "image_overlay_opacity": {
           "label": "Billedoverlejringens uigennemsigtighed"
@@ -1937,10 +1979,11 @@
             "label": "Omvendt"
           },
           "label": "Farveskema",
-          "info": "Synlig, når tekstfeltet vises"
+          "info": "Synlig, når containeren vises"
         },
         "show_text_below": {
-          "label": "Viser teksten under billedet på mobiltelefoner"
+          "label": "Vis indhold under billede på mobiltelefon",
+          "info": "Brug et billede med et højde-bredde-forhold på 16:9 for at opnå det bedste resultat. [Få mere at vide](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "Bannerhøjde",
@@ -1957,6 +2000,63 @@
             "label": "Stor"
           },
           "info": "Brug et billede med et højde-bredde-forhold på 16:9 for at opnå det bedste resultat. [Få mere at vide](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__4": {
+            "label": "Midt på til venstre"
+          },
+          "options__5": {
+            "label": "Midt på centreret"
+          },
+          "options__6": {
+            "label": "Midt på til højre"
+          },
+          "options__7": {
+            "label": "Nederst til venstre"
+          },
+          "options__8": {
+            "label": "Nederst i midten"
+          },
+          "options__9": {
+            "label": "Nederst til højre"
+          },
+          "options__1": {
+            "label": "Øverst til venstre"
+          },
+          "options__2": {
+            "label": "Øverst i midten"
+          },
+          "options__3": {
+            "label": "Øverst til højre"
+          },
+          "label": "Placering af indhold på computer"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Venstre"
+          },
+          "options__2": {
+            "label": "Centreret"
+          },
+          "options__3": {
+            "label": "Højre"
+          },
+          "label": "Justering af indhold på computer"
+        },
+        "header": {
+          "content": "Mobillayout"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Venstre"
+          },
+          "options__2": {
+            "label": "Centreret"
+          },
+          "options__3": {
+            "label": "Højre"
+          },
+          "label": "Justering af indhold på mobil"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "Beskrivelse"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Brødtekst"
+              },
+              "options__2": {
+                "label": "Undertekst"
+              },
+              "label": "Teksttypografi"
             }
           }
         },
@@ -1982,6 +2091,273 @@
       },
       "presets": {
         "name": "Banner for tilmelding med mail"
+      }
+    },
+    "slideshow": {
+      "name": "Diasshow",
+      "settings": {
+        "layout": {
+          "label": "Layout",
+          "options__1": {
+            "label": "Fuld bredde"
+          },
+          "options__2": {
+            "label": "Gitter"
+          }
+        },
+        "slide_height": {
+          "label": "Diashøjde",
+          "options__1": {
+            "label": "Tilpas til første side"
+          },
+          "options__2": {
+            "label": "Lille"
+          },
+          "options__3": {
+            "label": "Medium"
+          },
+          "options__4": {
+            "label": "Stor"
+          }
+        },
+        "slider_visual": {
+          "label": "Sideinddeling – stil",
+          "options__1": {
+            "label": "Tæller"
+          },
+          "options__2": {
+            "label": "Prikker"
+          },
+          "options__3": {
+            "label": "Tal"
+          }
+        },
+        "heading_size": {
+          "label": "Skriftstørrelse til overskrifter",
+          "options__1": {
+            "label": "Medium"
+          },
+          "options__2": {
+            "label": "Stor"
+          }
+        },
+        "box_align": {
+          "label": "Placering af indhold på computer",
+          "options__1": {
+            "label": "Øverst til venstre"
+          },
+          "options__2": {
+            "label": "Øverst i midten"
+          },
+          "options__3": {
+            "label": "Øverst til højre"
+          },
+          "options__4": {
+            "label": "Midt på til venstre"
+          },
+          "options__5": {
+            "label": "Midt på centreret"
+          },
+          "options__6": {
+            "label": "Midt på til højre"
+          },
+          "options__7": {
+            "label": "Nederst til venstre"
+          },
+          "options__8": {
+            "label": "Nederst i midten"
+          },
+          "options__9": {
+            "label": "Nederst til højre"
+          }
+        },
+        "show_text_box": {
+          "label": "Vis container på skrivebord"
+        },
+        "text_alignment": {
+          "label": "Justering af indhold på computer",
+          "option_1": {
+            "label": "Venstre"
+          },
+          "option_2": {
+            "label": "Centreret"
+          },
+          "option_3": {
+            "label": "Højre"
+          }
+        },
+        "image_overlay_opacity": {
+          "label": "Billedoverlejringens uigennemsigtighed"
+        },
+        "auto_rotate": {
+          "label": "Roter automatisk slides"
+        },
+        "change_slides_speed": {
+          "label": "Skift slide hver"
+        },
+        "color_scheme": {
+          "label": "Farveskema (felt)",
+          "info": "Synlig, når containeren vises.",
+          "options__1": {
+            "label": "Markering 1"
+          },
+          "options__2": {
+            "label": "Markering 2"
+          },
+          "options__3": {
+            "label": "Baggrund 1"
+          },
+          "options__4": {
+            "label": "Baggrund 2"
+          },
+          "options__5": {
+            "label": "Omvendt"
+          }
+        },
+        "mobile": {
+          "content": "Mobillayout"
+        },
+        "text_alignment_mobile": {
+          "label": "Justering af indhold på mobil",
+          "options__1": {
+            "label": "Venstre"
+          },
+          "options__2": {
+            "label": "Centreret"
+          },
+          "options__3": {
+            "label": "Højre"
+          }
+        },
+        "show_text_below": {
+          "label": "Vis indhold under billeder på mobiltelefoner"
+        },
+        "accessibility": {
+          "content": "Tilgængelighed",
+          "label": "Beskrivelse af diasshow",
+          "info": "Beskriv diasshowet for kunder med en skærmlæser."
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "Slide",
+          "settings": {
+            "image": {
+              "label": "Billede"
+            },
+            "heading": {
+              "label": "Overskrift"
+            },
+            "subheading": {
+              "label": "Underoverskrift"
+            },
+            "button_label": {
+              "label": "Knaptekst",
+              "info": "Lad feltet være tomt for at skjule knappen."
+            },
+            "link": {
+              "label": "Knaplink",
+              "info": "Lad feltet være tomt for at skjule knappen."
+            },
+            "secondary_style": {
+              "label": "Brug rammeknaptypografi"
+            },
+            "heading_size": {
+              "label": "Størrelse for overskrift",
+              "options__1": {
+                "label": "Lille"
+              },
+              "options__2": {
+                "label": "Medium"
+              },
+              "options__3": {
+                "label": "Stor"
+              }
+            },
+            "box_align": {
+              "label": "Placering af indhold på computer",
+              "options__1": {
+                "label": "Øverst til venstre"
+              },
+              "options__2": {
+                "label": "Øverst i midten"
+              },
+              "options__3": {
+                "label": "Øverst til højre"
+              },
+              "options__4": {
+                "label": "Midt på til venstre"
+              },
+              "options__5": {
+                "label": "Midt på centreret"
+              },
+              "options__6": {
+                "label": "Midt på til højre"
+              },
+              "options__7": {
+                "label": "Nederst til venstre"
+              },
+              "options__8": {
+                "label": "Nederst i midten"
+              },
+              "options__9": {
+                "label": "Nederst til højre"
+              }
+            },
+            "show_text_box": {
+              "label": "Vis container på skrivebord"
+            },
+            "text_alignment": {
+              "label": "Justering af indhold på computer",
+              "option_1": {
+                "label": "Venstre"
+              },
+              "option_2": {
+                "label": "Centreret"
+              },
+              "option_3": {
+                "label": "Højre"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "Billedoverlejringens uigennemsigtighed"
+            },
+            "color_scheme": {
+              "label": "Farveskema",
+              "info": "Synlig, når containeren vises.",
+              "options__1": {
+                "label": "Markering 1"
+              },
+              "options__2": {
+                "label": "Markering 2"
+              },
+              "options__3": {
+                "label": "Baggrund 1"
+              },
+              "options__4": {
+                "label": "Baggrund 2"
+              },
+              "options__5": {
+                "label": "Omvendt"
+              }
+            },
+            "text_alignment_mobile": {
+              "label": "Justering af indhold på mobil",
+              "options__1": {
+                "label": "Venstre"
+              },
+              "options__2": {
+                "label": "Centreret"
+              },
+              "options__3": {
+                "label": "Højre"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "Diasshow"
       }
     }
   }
