--- a/locales/de.schema.json
+++ b/locales/de.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "Zweites Bild"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Oben"
-          },
-          "options__2": {
-            "label": "Zentriert"
-          },
-          "options__3": {
-            "label": "Unten"
-          },
-          "label": "Desktop-Textposition"
-        },
         "color_scheme": {
           "options__1": {
             "label": "Akzent 1"
@@ -729,7 +717,7 @@
             "label": "Invertiert"
           },
           "label": "Farbschema",
-          "info": "Wird für Textfelder verwendet."
+          "info": "Sichtbar, wenn Container angezeigt wird."
         },
         "stack_images_on_mobile": {
           "label": "Gestapelte Bilder auf Mobilgeräten"
@@ -739,7 +727,7 @@
           "info": "Überschreibt bei Überprüfung die Einstellung für die Höhe des Bild-Banners."
         },
         "show_text_box": {
-          "label": "Textfeld auf dem Desktop anzeigen"
+          "label": "Container auf dem Desktop anzeigen"
         },
         "image_overlay_opacity": {
           "label": "Deckkraft der Bildüberlagerung"
@@ -748,7 +736,7 @@
           "content": "Mobiles Layout"
         },
         "show_text_below": {
-          "label": "Text unter Bildern anzeigen"
+          "label": "Container auf Mobilgerät anzeigen"
         },
         "image_height": {
           "label": "Bannerhöhe",
@@ -762,6 +750,60 @@
             "label": "Groß"
           },
           "info": "Verwende für Bilder ein Seitenverhältnis von 3:2 für optimale Ergebnisse. [Mehr Informationen](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Oben links"
+          },
+          "options__2": {
+            "label": "Oben zentriert"
+          },
+          "options__3": {
+            "label": "Oben rechts"
+          },
+          "options__4": {
+            "label": "Mitte links"
+          },
+          "options__5": {
+            "label": "Mitte zentriert"
+          },
+          "options__6": {
+            "label": "Mitte rechts"
+          },
+          "options__7": {
+            "label": "Unten links"
+          },
+          "options__8": {
+            "label": "Unten zentriert"
+          },
+          "options__9": {
+            "label": "Unten rechts"
+          },
+          "label": "Desktopinhaltsposition"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Links"
+          },
+          "options__2": {
+            "label": "Zentriert"
+          },
+          "options__3": {
+            "label": "Rechts"
+          },
+          "label": "Desktopinhaltsausrichtung"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Links"
+          },
+          "options__2": {
+            "label": "Zentriert"
+          },
+          "options__3": {
+            "label": "Rechts"
+          },
+          "label": "Mobile Inhaltsausrichtung"
         }
       },
       "blocks": {
@@ -787,6 +829,18 @@
           "settings": {
             "text": {
               "label": "Beschreibung"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Nachricht"
+              },
+              "options__2": {
+                "label": "Untertitel"
+              },
+              "options__3": {
+                "label": "Großbuchstaben"
+              },
+              "label": "Textstil"
             }
           }
         },
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "Hintergrundbild anzeigen"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Oben"
-          },
-          "options__2": {
-            "label": "Zentriert"
-          },
-          "options__3": {
-            "label": "Unten"
-          },
-          "label": "Desktop-Textposition"
-        },
         "show_text_box": {
-          "label": "Textfeld auf dem Desktop anzeigen"
+          "label": "Container auf dem Desktop anzeigen"
         },
         "image_overlay_opacity": {
           "label": "Deckkraft der Bildüberlagerung"
@@ -1937,10 +1979,11 @@
             "label": "Invertiert"
           },
           "label": "Farbschema",
-          "info": "Sichtbar, wenn Textfeld angezeigt wird"
+          "info": "Sichtbar, wenn Container angezeigt wird"
         },
         "show_text_below": {
-          "label": "Auf Mobilgeräten Text unterhalb der Bilder anzeigen"
+          "label": "Auf Mobilgeräten Inhalt unterhalb der Bilder anzeigen",
+          "info": "Verwende Bilder mit einem Seitenverhältnis von 16:9 für optimale Ergebnisse. [Mehr Informationen](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "Bannerhöhe",
@@ -1957,6 +2000,63 @@
             "label": "Groß"
           },
           "info": "Verwende Bilder mit einem Seitenverhältnis von 16:9 für optimale Ergebnisse. [Mehr Informationen](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Oben links"
+          },
+          "options__2": {
+            "label": "Oben zentriert"
+          },
+          "options__3": {
+            "label": "Oben rechts"
+          },
+          "options__4": {
+            "label": "Mitte links"
+          },
+          "options__5": {
+            "label": "Mitte zentriert"
+          },
+          "options__6": {
+            "label": "Mitte rechts"
+          },
+          "options__7": {
+            "label": "Unten links"
+          },
+          "options__8": {
+            "label": "Unten zentriert"
+          },
+          "options__9": {
+            "label": "Unten rechts"
+          },
+          "label": "Desktopinhaltsposition"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Links"
+          },
+          "options__2": {
+            "label": "Zentriert"
+          },
+          "options__3": {
+            "label": "Rechts"
+          },
+          "label": "Desktopinhaltsausrichtung"
+        },
+        "header": {
+          "content": "Mobiles Layout"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Links"
+          },
+          "options__2": {
+            "label": "Zentriert"
+          },
+          "options__3": {
+            "label": "Rechts"
+          },
+          "label": "Mobile Inhaltsausrichtung"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "Beschreibung"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Nachricht"
+              },
+              "options__2": {
+                "label": "Untertitel"
+              },
+              "label": "Textstil"
             }
           }
         },
@@ -1982,6 +2091,185 @@
       },
       "presets": {
         "name": "Banner für E-Mail-Anmeldung"
+      }
+    },
+    "slideshow": {
+      "name": "Slideshow",
+      "settings": {
+        "layout": {
+          "label": "Layout",
+          "options__1": {
+            "label": "Volle Breite"
+          },
+          "options__2": {
+            "label": "Raster"
+          }
+        },
+        "slide_height": {
+          "label": "Diahöhe",
+          "options__1": {
+            "label": "An erstes Bild anpassen"
+          },
+          "options__2": {
+            "label": "Klein"
+          },
+          "options__3": {
+            "label": "Mittel"
+          },
+          "options__4": {
+            "label": "Groß"
+          }
+        },
+        "slider_visual": {
+          "label": "Seitennummerierungsstil",
+          "options__1": {
+            "label": "Zähler"
+          },
+          "options__2": {
+            "label": "Punkte"
+          },
+          "options__3": {
+            "label": "Zahlen"
+          }
+        },
+        "auto_rotate": {
+          "label": "Autorotieren der Slides"
+        },
+        "change_slides_speed": {
+          "label": "Slides überall ändern"
+        },
+        "show_text_below": {
+          "label": "Auf Mobilgeräten Inhalt unterhalb der Bilder anzeigen"
+        },
+        "mobile": {
+          "content": "Mobiles Layout"
+        },
+        "accessibility": {
+          "content": "Barrierefreiheit",
+          "label": "Slideshow-Beschreibung",
+          "info": "Beschreibe die Slideshow für Kunden, die Bildschirmlesegeräte benutzen."
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "Folie",
+          "settings": {
+            "image": {
+              "label": "Bild"
+            },
+            "heading": {
+              "label": "Titel"
+            },
+            "subheading": {
+              "label": "Unter-Überschrift"
+            },
+            "button_label": {
+              "label": "Schaltflächenbeschriftung",
+              "info": "Lasse die Beschriftung leer, um die Schaltfläche auszublenden."
+            },
+            "link": {
+              "label": "Schaltflächenlink",
+              "info": "Lasse die Beschriftung leer, um die Schaltfläche auszublenden."
+            },
+            "secondary_style": {
+              "label": "Umriss-Stil für Schaltfläche verwenden"
+            },
+            "heading_size": {
+              "label": "Größe der Überschrift",
+              "options__1": {
+                "label": "Klein"
+              },
+              "options__2": {
+                "label": "Mittel"
+              },
+              "options__3": {
+                "label": "Groß"
+              }
+            },
+            "box_align": {
+              "label": "Desktop-Inhaltsposition",
+              "options__1": {
+                "label": "Oben links"
+              },
+              "options__2": {
+                "label": "Oben zentriert"
+              },
+              "options__3": {
+                "label": "Oben rechts"
+              },
+              "options__4": {
+                "label": "Mitte links"
+              },
+              "options__5": {
+                "label": "Mitte mittig"
+              },
+              "options__6": {
+                "label": "Mitte rechts"
+              },
+              "options__7": {
+                "label": "Unten links"
+              },
+              "options__8": {
+                "label": "Unten mittig"
+              },
+              "options__9": {
+                "label": "Unten rechts"
+              }
+            },
+            "show_text_box": {
+              "label": "Container auf dem Desktop anzeigen"
+            },
+            "text_alignment": {
+              "label": "Desktop-Inhaltsausrichtung",
+              "option_1": {
+                "label": "Links"
+              },
+              "option_2": {
+                "label": "Zentriert"
+              },
+              "option_3": {
+                "label": "Rechts"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "Deckkraft der Bildüberlagerung"
+            },
+            "color_scheme": {
+              "label": "Farbschema",
+              "info": "Sichtbar, wenn Container angezeigt wird.",
+              "options__1": {
+                "label": "Akzent 1"
+              },
+              "options__2": {
+                "label": "Akzent 2"
+              },
+              "options__3": {
+                "label": "Hintergrund 1"
+              },
+              "options__4": {
+                "label": "Hintergrund 2"
+              },
+              "options__5": {
+                "label": "Invertiert"
+              }
+            },
+            "text_alignment_mobile": {
+              "label": "Mobile Inhaltsausrichtung",
+              "options__1": {
+                "label": "Links"
+              },
+              "options__2": {
+                "label": "Zentriert"
+              },
+              "options__3": {
+                "label": "Rechts"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "Slideshow"
       }
     }
   }
