--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -822,6 +822,9 @@
         "image_2": {
           "label": "Second image"
         },
+        "image_overlay_opacity": {
+          "label": "Image overlay opacity"
+        },
         "image_height": {
           "label": "Banner height",
           "options__1": {
@@ -835,23 +838,50 @@
           },
           "info": "For best results, use an image with a 3:2 aspect ratio. [Learn more](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
-        "desktop_text_box_position": {
+        "desktop_content_position": {
           "options__1": {
-            "label": "Top"
+            "label": "Top Left"
+          },
+          "options__2": {
+            "label": "Top Center"
+          },
+          "options__3": {
+            "label": "Top Right"
+          },
+          "options__4": {
+            "label": "Middle Left"
+          },
+          "options__5": {
+            "label": "Middle Center"
+          },
+          "options__6": {
+            "label": "Middle Right"
+          },
+          "options__7": {
+            "label": "Bottom Left"
+          },
+          "options__8": {
+            "label": "Bottom Center"
+          },
+          "options__9": {
+            "label": "Bottom Right"
+          },
+          "label": "Desktop content position"
+        },
+        "show_text_box": {
+          "label": "Show container on desktop"
+        },
+        "desktop_content_alignment": {       
+          "options__1": {
+            "label": "Left"
           },
           "options__2": {
             "label": "Center"
           },
           "options__3": {
-            "label": "Bottom"
+            "label": "Right"
           },
-          "label": "Desktop text position"
-        },
-        "show_text_box": {
-          "label": "Show text box on desktop"
-        },
-        "image_overlay_opacity": {
-          "label": "Image overlay opacity"
+          "label": "Desktop content alignment"
         },
         "color_scheme": {
           "options__1": {
@@ -870,16 +900,28 @@
             "label": "Inverse"
           },
           "label": "Color scheme",
-          "info": "Used for text box."
+          "info": "Visible when container displayed."
         },
         "header": {
           "content": "Mobile Layout"
+        },
+        "mobile_content_alignment": {       
+          "options__1": {
+            "label": "Left"
+          },
+          "options__2": {
+            "label": "Center"
+          },
+          "options__3": {
+            "label": "Right"
+          },
+          "label": "Mobile content alignment"
         },
         "stack_images_on_mobile": {
           "label": "Stack images on mobile"
         },
         "show_text_below": {
-          "label": "Show text below images"
+          "label": "Show container on mobile"
         },
         "adapt_height_first_image": {
           "label": "Adapt section height to first image size",
@@ -909,6 +951,18 @@
           "settings": {
             "text": {
               "label": "Description"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Body"
+              },
+              "options__2": {
+                "label": "Subtitle"
+              },
+              "options__3": {
+                "label": "Uppercase"
+              },
+              "label": "Text style"
             }
           }
         },
@@ -1743,26 +1797,44 @@
         "image": {
           "label": "Background image"
         },
+        "image_overlay_opacity": {
+          "label": "Image overlay opacity"
+        },
         "show_background_image": {
           "label": "Show background image"
         },
-        "desktop_text_box_position": {
+        "show_text_box": {
+          "label": "Show container on desktop"
+        },
+        "desktop_content_position": {
           "options__1": {
-            "label": "Top"
+            "label": "Top Left"
           },
           "options__2": {
-            "label": "Center"
+            "label": "Top Center"
           },
           "options__3": {
-            "label": "Bottom"
+            "label": "Top Right"
           },
-          "label": "Desktop text position"
-        },
-        "show_text_box": {
-          "label": "Show text box on desktop"
-        },
-        "image_overlay_opacity": {
-          "label": "Image overlay opacity"
+          "options__4": {
+            "label": "Middle Left"
+          },
+          "options__5": {
+            "label": "Middle Center"
+          },
+          "options__6": {
+            "label": "Middle Right"
+          },
+          "options__7": {
+            "label": "Bottom Left"
+          },
+          "options__8": {
+            "label": "Bottom Center"
+          },
+          "options__9": {
+            "label": "Bottom Right"
+          },
+          "label": "Desktop content position"
         },
         "color_scheme": {
           "options__1": {
@@ -1781,10 +1853,7 @@
             "label": "Inverse"
           },
           "label": "Color scheme",
-          "info": "Visible when text box displayed"
-        },
-        "show_text_below": {
-          "label": "Show text below image on mobile"
+          "info": "Visible when container displayed"
         },
         "image_height": {
           "label": "Banner height",
@@ -1801,6 +1870,37 @@
             "label": "Large"
           },
           "info": "For best results, use an image with a 16:9 aspect ratio. [Learn more](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Left"
+          },
+          "options__2": {
+            "label": "Center"
+          },
+          "options__3": {
+            "label": "Right"
+          },
+          "label": "Desktop content alignment"
+        },
+        "header": {
+          "content": "Mobile Layout"
+        },
+        "mobile_content_alignment": {       
+          "options__1": {
+            "label": "Left"
+          },
+          "options__2": {
+            "label": "Center"
+          },
+          "options__3": {
+            "label": "Right"
+          },
+          "label": "Mobile content alignment"
+        },
+        "show_text_below": {
+          "label": "Show content below image on mobile",
+          "info": "For best results, use an image with a 16:9 aspect ratio. [Learn more](https:\/\/help.shopify.com\/en\/manual\/shopify-admin\/productivity-tools\/image-editor#understanding-image-aspect-ratio)"
         }
       },
       "blocks": {
@@ -1817,6 +1917,15 @@
           "settings": {
             "paragraph": {
               "label": "Description"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Body"
+              },
+              "options__2": {
+                "label": "Subtitle"
+              },
+              "label": "Text style"
             }
           }
         },
@@ -1982,6 +2091,184 @@
       },
       "presets": {
         "name": "Video"
+      }
+    },
+    "slideshow": {
+      "name": "Slideshow",
+      "settings": {
+        "layout": {
+          "label": "Layout",
+          "options__1": {
+            "label": "Full width"
+          },
+          "options__2": {
+            "label": "Grid"
+          }
+        },
+        "slide_height": {
+          "label": "Slide height",
+          "options__1": {
+            "label": "Adapt to first image"
+          },
+          "options__2": {
+            "label": "Small"
+          },
+          "options__3": {
+            "label": "Medium"
+          },
+          "options__4": {
+            "label": "Large"
+          }
+        },
+        "slider_visual": {
+          "label": "Pagination style",
+          "options__1": {
+            "label": "Counter"
+          },
+          "options__2": {
+            "label": "Dots"
+          },
+          "options__3": {
+            "label": "Numbers"
+          }
+        },
+        "auto_rotate": {
+          "label": "Auto-rotate slides"
+        },
+        "change_slides_speed": {
+          "label": "Change slides every"
+        },
+        "mobile": {
+          "content": "Mobile layout"
+        },
+        "show_text_below": {
+          "label": "Show content below images on mobile"
+        },
+        "accessibility": {
+          "content": "Accessibility",
+          "label": "Slideshow description",
+          "info": "Describe the slideshow for customers using screen readers."
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "Slide",
+          "settings": {
+            "image": {
+              "label": "Image"
+            },
+            "heading": {
+              "label": "Heading"
+            },
+            "subheading": {
+              "label": "Subheading"
+            },
+            "button_label": {
+              "label": "Button label",
+              "info": "Leave the label blank to hide the button."
+            },
+            "link": {
+              "label": "Button link"
+            },
+            "secondary_style": {
+              "label": "Use outline button style"
+            },
+            "heading_size": {
+              "label": "Heading size",
+              "options__1": {
+                "label": "Small"
+              },
+              "options__2": {
+                "label": "Medium"
+              },
+              "options__3": {
+                "label": "Large"
+              }
+            },
+            "box_align": {
+              "label": "Desktop content position",
+              "options__1": {
+                "label": "Top left"
+              },
+              "options__2": {
+                "label": "Top center"
+              },
+              "options__3": {
+                "label": "Top right"
+              },
+              "options__4": {
+                "label": "Middle left"
+              },
+              "options__5": {
+                "label": "Middle center"
+              },
+              "options__6": {
+                "label": "Middle right"
+              },
+              "options__7": {
+                "label": "Bottom left"
+              },
+              "options__8": {
+                "label": "Bottom center"
+              },
+              "options__9": {
+                "label": "Bottom right"
+              }
+            },
+            "show_text_box": {
+              "label": "Show container on desktop"
+            },
+            "text_alignment": {
+              "label": "Desktop content alignment",
+              "option_1": {
+                "label": "Left"
+              },
+              "option_2": {
+                "label": "Center"
+              },
+              "option_3": {
+                "label": "Right"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "Image overlay opacity"
+            },
+            "color_scheme": {
+              "label": "Color scheme",
+              "info": "Visible when container displayed.",
+              "options__1": {
+                "label": "Accent 1"
+              },
+              "options__2": {
+                "label": "Accent 2"
+              },
+              "options__3": {
+                "label": "Background 1"
+              },
+              "options__4": {
+                "label": "Background 2"
+              },
+              "options__5": {
+                "label": "Inverse"
+              }
+            },
+            "text_alignment_mobile": {
+              "label": "Mobile content alignment",
+              "options__1": {
+                "label": "Left"
+              },
+              "options__2": {
+                "label": "Center"
+              },
+              "options__3": {
+                "label": "Right"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "Slideshow"
       }
     }
   }
