--- a/locales/fi.schema.json
+++ b/locales/fi.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "Toinen kuva"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Ylös"
-          },
-          "options__2": {
-            "label": "Keskitetty"
-          },
-          "options__3": {
-            "label": "Alas"
-          },
-          "label": "Työpöytätekstin sijainti"
-        },
         "color_scheme": {
           "options__1": {
             "label": "Korostus 1"
@@ -729,7 +717,7 @@
             "label": "Käänteinen"
           },
           "label": "Värimalli",
-          "info": "Käytetään tekstiruudussa."
+          "info": "Näkyvillä, kun säilö on esillä."
         },
         "stack_images_on_mobile": {
           "label": "Pinoa kuvat mobiilissa"
@@ -739,7 +727,7 @@
           "info": "Korvaa kuvabannerin korkeusasetuksen"
         },
         "show_text_box": {
-          "label": "Näytä tekstiruutu työpöydällä"
+          "label": "Näytä säilö pöytäkoneella"
         },
         "image_overlay_opacity": {
           "label": "Peittokuvan läpikuultavuus"
@@ -748,7 +736,7 @@
           "content": "Mobiiliasettelu"
         },
         "show_text_below": {
-          "label": "Näytä teksti kuvien alapuolella"
+          "label": "Näytä säilö mobiililaitteessa"
         },
         "image_height": {
           "label": "Bannerin korkeus",
@@ -762,6 +750,60 @@
             "label": "Suuri"
           },
           "info": "Saat parhaat tulokset käyttämällä kuvaa, jonka kuvasuhde on 3:2. [Lisätietoja](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Ylhäällä vasemmalla"
+          },
+          "options__2": {
+            "label": "Keskellä ylhäällä"
+          },
+          "options__3": {
+            "label": "Ylhäällä oikealla"
+          },
+          "options__4": {
+            "label": "Keskellä vasemmalla"
+          },
+          "options__5": {
+            "label": "Keskitetty keskelle"
+          },
+          "options__6": {
+            "label": "Keskellä oikealla"
+          },
+          "options__7": {
+            "label": "Alhaalla vasemmalla"
+          },
+          "options__8": {
+            "label": "Keskellä alhaalla"
+          },
+          "options__9": {
+            "label": "Alhaalla oikealla"
+          },
+          "label": "Työpöytäsisällön sijainti"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Vasemmalla"
+          },
+          "options__2": {
+            "label": "Keskitetty"
+          },
+          "options__3": {
+            "label": "Oikealla"
+          },
+          "label": "Työpöydän sisällön kohdistus"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Vasemmalla"
+          },
+          "options__2": {
+            "label": "Keskitetty"
+          },
+          "options__3": {
+            "label": "Oikealla"
+          },
+          "label": "Mobiilisisällön tasaus"
         }
       },
       "blocks": {
@@ -787,6 +829,18 @@
           "settings": {
             "text": {
               "label": "Kuvaus"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Leipäteksti"
+              },
+              "options__2": {
+                "label": "Alaotsikko"
+              },
+              "options__3": {
+                "label": "Isot kirjaimet"
+              },
+              "label": "Tekstityyli"
             }
           }
         },
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "Näytä taustakuva"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Ylös"
-          },
-          "options__2": {
-            "label": "Keskitetty"
-          },
-          "options__3": {
-            "label": "Alas"
-          },
-          "label": "Työpöytätekstin sijainti"
-        },
         "show_text_box": {
-          "label": "Näytä tekstiruutu työpöydällä"
+          "label": "Näytä säilö pöytäkoneella"
         },
         "image_overlay_opacity": {
           "label": "Peittokuvan läpikuultavuus"
@@ -1937,10 +1979,11 @@
             "label": "Käänteinen"
           },
           "label": "Värimalli",
-          "info": "Näkyvillä, kun tekstiruutu on esillä"
+          "info": "Näkyvillä, kun säilö on esillä"
         },
         "show_text_below": {
-          "label": "Näyttä kuvien alla oleva teksti mobiililaitteessa"
+          "label": "Näytä kuvien alla oleva sisältö mobiililaitteessa",
+          "info": "Saat parhaat tulokset käyttämällä kuvaa, jonka kuvasuhde on 16:9. [Lisätietoja](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "Bannerin korkeus",
@@ -1957,6 +2000,63 @@
             "label": "Suuri"
           },
           "info": "Saat parhaat tulokset käyttämällä kuvaa, jonka kuvasuhde on 16:9. [Lisätietoja](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__4": {
+            "label": "Keskellä vasemmalla"
+          },
+          "options__5": {
+            "label": "Keskitetty keskelle"
+          },
+          "options__6": {
+            "label": "Keskellä oikealla"
+          },
+          "options__7": {
+            "label": "Alhaalla vasemmalla"
+          },
+          "options__8": {
+            "label": "Keskellä alhaalla"
+          },
+          "options__9": {
+            "label": "Alhaalla oikealla"
+          },
+          "options__1": {
+            "label": "Ylhäällä vasemmalla"
+          },
+          "options__2": {
+            "label": "Keskellä ylhäällä"
+          },
+          "options__3": {
+            "label": "Ylhäällä oikealla"
+          },
+          "label": "Työpöytäsisällön sijainti"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Vasemmalla"
+          },
+          "options__2": {
+            "label": "Keskitetty"
+          },
+          "options__3": {
+            "label": "Oikealla"
+          },
+          "label": "Työpöydän sisällön kohdistus"
+        },
+        "header": {
+          "content": "Mobiiliasettelu"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Vasemmalla"
+          },
+          "options__2": {
+            "label": "Keskitetty"
+          },
+          "options__3": {
+            "label": "Oikealla"
+          },
+          "label": "Mobiilisisällön tasaus"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "Kuvaus"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Leipäteksti"
+              },
+              "options__2": {
+                "label": "Alaotsikko"
+              },
+              "label": "Tekstityyli"
             }
           }
         },
@@ -1982,6 +2091,184 @@
       },
       "presets": {
         "name": "Sähköpostirekisteröitymisen banneri"
+      }
+    },
+    "slideshow": {
+      "name": "Diaesitys",
+      "settings": {
+        "layout": {
+          "label": "Asettelu",
+          "options__1": {
+            "label": "Täysi leveys"
+          },
+          "options__2": {
+            "label": "Ruudukko"
+          }
+        },
+        "slide_height": {
+          "label": "Dian korkeus",
+          "options__1": {
+            "label": "Mukauta ensimmäisen kuvan mukaan"
+          },
+          "options__2": {
+            "label": "Pieni"
+          },
+          "options__3": {
+            "label": "Keskisuuri"
+          },
+          "options__4": {
+            "label": "Suuri"
+          }
+        },
+        "slider_visual": {
+          "label": "Sivunumerointityyli",
+          "options__1": {
+            "label": "Laskuri"
+          },
+          "options__2": {
+            "label": "Pisteet"
+          },
+          "options__3": {
+            "label": "Numerot"
+          }
+        },
+        "auto_rotate": {
+          "label": "Käännä diat automaattisesti"
+        },
+        "change_slides_speed": {
+          "label": "Vaihda diat joka"
+        },
+        "show_text_below": {
+          "label": "Näytä kuvan alla oleva sisältö mobiililaitteessa"
+        },
+        "mobile": {
+          "content": "Mobiiliasettelu"
+        },
+        "accessibility": {
+          "content": "Käytettävyys",
+          "label": "Diaesityksen kuvaus",
+          "info": "Kuvaile diaesitystä näytönlukijoita käyttäviä asiakkaita varten."
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "Dia",
+          "settings": {
+            "image": {
+              "label": "Kuva"
+            },
+            "heading": {
+              "label": "Otsikko"
+            },
+            "subheading": {
+              "label": "Alaotsikko"
+            },
+            "button_label": {
+              "label": "Tekstipainike",
+              "info": "Jos haluat piilottaa painikkeen, jätä painikkeen teksti tyhjäksi."
+            },
+            "link": {
+              "label": "Painikelinkki"
+            },
+            "secondary_style": {
+              "label": "Käytä ääriviivallista painiketyyliä"
+            },
+            "heading_size": {
+              "label": "Otsikon koko",
+              "options__1": {
+                "label": "Pieni"
+              },
+              "options__2": {
+                "label": "Keskisuuri"
+              },
+              "options__3": {
+                "label": "Suuri"
+              }
+            },
+            "box_align": {
+              "label": "Työpöytäsisällön sijainti",
+              "options__1": {
+                "label": "Ylhäällä vasemmalla"
+              },
+              "options__2": {
+                "label": "Keskellä ylhäällä"
+              },
+              "options__3": {
+                "label": "Ylhäällä oikealla"
+              },
+              "options__4": {
+                "label": "Keskellä vasemmalla"
+              },
+              "options__5": {
+                "label": "Keskellä"
+              },
+              "options__6": {
+                "label": "Keskellä oikealla"
+              },
+              "options__7": {
+                "label": "Alhaalla vasemmalla"
+              },
+              "options__8": {
+                "label": "Keskellä alhaalla"
+              },
+              "options__9": {
+                "label": "Alhaalla oikealla"
+              }
+            },
+            "show_text_box": {
+              "label": "Näytä säilö pöytäkoneella"
+            },
+            "text_alignment": {
+              "label": "Työpöydän sisällön kohdistus",
+              "option_1": {
+                "label": "Vasemmalla"
+              },
+              "option_2": {
+                "label": "Keskitetty"
+              },
+              "option_3": {
+                "label": "Oikealla"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "Peittokuvan läpikuultavuus"
+            },
+            "color_scheme": {
+              "info": "Näkyvillä, kun säilö on esillä.",
+              "options__1": {
+                "label": "Korostus 1"
+              },
+              "options__2": {
+                "label": "Korostus 2"
+              },
+              "options__3": {
+                "label": "Tausta 1"
+              },
+              "options__4": {
+                "label": "Tausta 2"
+              },
+              "options__5": {
+                "label": "Käänteinen"
+              },
+              "label": "Värimalli"
+            },
+            "text_alignment_mobile": {
+              "label": "Mobiilisisällön tasaus",
+              "options__1": {
+                "label": "Vasemmalla"
+              },
+              "options__2": {
+                "label": "Keskitetty"
+              },
+              "options__3": {
+                "label": "Oikealla"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "Diaesitys"
       }
     }
   }
