--- a/locales/fr.schema.json
+++ b/locales/fr.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "Deuxième image"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Haut"
-          },
-          "options__2": {
-            "label": "Centre"
-          },
-          "options__3": {
-            "label": "Bas"
-          },
-          "label": "Position du texte sur le bureau"
-        },
         "color_scheme": {
           "options__1": {
             "label": "Accentuation 1"
@@ -729,7 +717,7 @@
             "label": "Inverser"
           },
           "label": "Combinaison de couleurs",
-          "info": "Utilisée pour la zone de texte."
+          "info": "Visible lorsque le conteneur est affiché."
         },
         "stack_images_on_mobile": {
           "label": "Empiler des images sur un mobile"
@@ -739,7 +727,7 @@
           "info": "Remplace le paramètre de hauteur de la bannière d'image lorsqu'il est activé."
         },
         "show_text_box": {
-          "label": "Afficher la zone de texte sur le bureau"
+          "label": "Afficher le conteneur sur le bureau"
         },
         "image_overlay_opacity": {
           "label": "Opacité de la superposition d'images"
@@ -748,7 +736,7 @@
           "content": "Mise en page mobile"
         },
         "show_text_below": {
-          "label": "Afficher le texte sous les images"
+          "label": "Afficher le conteneur sur le mobile"
         },
         "image_height": {
           "label": "Hauteur de la bannière",
@@ -762,6 +750,60 @@
             "label": "Grand"
           },
           "info": "Pour optimiser vos résultats, utilisez une image ayant un rapport d'aspect de 3:2. [En savoir plus](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "En haut à gauche"
+          },
+          "options__2": {
+            "label": "En haut au centre"
+          },
+          "options__3": {
+            "label": "En haut à droite"
+          },
+          "options__4": {
+            "label": "Au milieu à gauche"
+          },
+          "options__5": {
+            "label": "Centré au milieu"
+          },
+          "options__6": {
+            "label": "Au milieu à droite"
+          },
+          "options__7": {
+            "label": "En bas à gauche"
+          },
+          "options__8": {
+            "label": "En bas au centre"
+          },
+          "options__9": {
+            "label": "En bas à droite"
+          },
+          "label": "Position du contenu sur le bureau"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Gauche"
+          },
+          "options__2": {
+            "label": "Centre"
+          },
+          "options__3": {
+            "label": "Droite"
+          },
+          "label": "Alignement du contenu du bureau"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Gauche"
+          },
+          "options__2": {
+            "label": "Centre"
+          },
+          "options__3": {
+            "label": "Droite"
+          },
+          "label": "Alignement du contenu sur mobile"
         }
       },
       "blocks": {
@@ -787,6 +829,18 @@
           "settings": {
             "text": {
               "label": "Description"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Corps"
+              },
+              "options__2": {
+                "label": "Sous-titre"
+              },
+              "options__3": {
+                "label": "Majuscule"
+              },
+              "label": "Style de texte"
             }
           }
         },
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "Afficher l'image de fond"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Haut"
-          },
-          "options__2": {
-            "label": "Centre"
-          },
-          "options__3": {
-            "label": "Bas"
-          },
-          "label": "Position du texte sur le bureau"
-        },
         "show_text_box": {
-          "label": "Afficher la zone de texte sur le bureau"
+          "label": "Afficher le conteneur sur le bureau"
         },
         "image_overlay_opacity": {
           "label": "Opacité de la superposition d'images"
@@ -1937,10 +1979,11 @@
             "label": "Inverser"
           },
           "label": "Combinaison de couleurs",
-          "info": "Visible lorsque la zone de texte est affichée"
+          "info": "Visible lorsque le conteneur est affiché"
         },
         "show_text_below": {
-          "label": "Afficher le texte sous l'image sur les appareils mobiles"
+          "label": "Afficher le contenu sous l'image sur le mobile",
+          "info": "Pour optimiser vos résultats, utilisez une image ayant un rapport d'aspect de 16:9. [En savoir plus](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "Hauteur de la bannière",
@@ -1957,6 +2000,63 @@
             "label": "Grand"
           },
           "info": "Pour optimiser vos résultats, utilisez une image ayant un rapport d'aspect de 16:9. [En savoir plus](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__4": {
+            "label": "Au milieu à gauche"
+          },
+          "options__5": {
+            "label": "Centré au milieu"
+          },
+          "options__6": {
+            "label": "Au milieu à droite"
+          },
+          "options__7": {
+            "label": "En bas à gauche"
+          },
+          "options__8": {
+            "label": "En bas au centre"
+          },
+          "options__9": {
+            "label": "En bas à droite"
+          },
+          "options__1": {
+            "label": "En haut à gauche"
+          },
+          "options__2": {
+            "label": "En haut au centre"
+          },
+          "options__3": {
+            "label": "En haut à droite"
+          },
+          "label": "Position du contenu sur le bureau"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Gauche"
+          },
+          "options__2": {
+            "label": "Centre"
+          },
+          "options__3": {
+            "label": "Droite"
+          },
+          "label": "Alignement du contenu du bureau"
+        },
+        "header": {
+          "content": "Mise en page mobile"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Gauche"
+          },
+          "options__2": {
+            "label": "Centre"
+          },
+          "options__3": {
+            "label": "Droite"
+          },
+          "label": "Alignement du contenu sur mobile"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "Description"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Corps"
+              },
+              "options__2": {
+                "label": "Sous-titre"
+              },
+              "label": "Style de texte"
             }
           }
         },
@@ -1982,6 +2091,185 @@
       },
       "presets": {
         "name": "Bannière d'inscription à la liste de diffusion"
+      }
+    },
+    "slideshow": {
+      "name": "Diaporama",
+      "settings": {
+        "layout": {
+          "label": "Mise en page",
+          "options__1": {
+            "label": "Pleine largeur"
+          },
+          "options__2": {
+            "label": "Grille"
+          }
+        },
+        "slide_height": {
+          "label": "Hauteur de diapositive",
+          "options__1": {
+            "label": "Adapter à la première image"
+          },
+          "options__2": {
+            "label": "Petit"
+          },
+          "options__3": {
+            "label": "Moyen"
+          },
+          "options__4": {
+            "label": "Grand"
+          }
+        },
+        "slider_visual": {
+          "label": "Style de pagination",
+          "options__1": {
+            "label": "Compteur"
+          },
+          "options__2": {
+            "label": "Points"
+          },
+          "options__3": {
+            "label": "Numéros"
+          }
+        },
+        "auto_rotate": {
+          "label": "Rotation automatique des diapositives"
+        },
+        "change_slides_speed": {
+          "label": "Changer de diapositive toutes les"
+        },
+        "show_text_below": {
+          "label": "Afficher le contenu sous les images sur le mobile"
+        },
+        "mobile": {
+          "content": "Mise en page sur mobile"
+        },
+        "accessibility": {
+          "content": "Accessibilité",
+          "label": "Description du diaporama",
+          "info": "Décrivez le diaporama pour les clients utilisant des lecteurs d'écran."
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "Diapositive",
+          "settings": {
+            "image": {
+              "label": "Image"
+            },
+            "heading": {
+              "label": "En-tête"
+            },
+            "subheading": {
+              "label": "Sous-titre"
+            },
+            "button_label": {
+              "label": "Texte du bouton",
+              "info": "Laissez le texte vide pour masquer le bouton."
+            },
+            "link": {
+              "label": "Lien du bouton",
+              "info": "Laissez le texte vide pour masquer le bouton."
+            },
+            "secondary_style": {
+              "label": "Utiliser le style de bouton en relief"
+            },
+            "heading_size": {
+              "label": "Taille du titre",
+              "options__1": {
+                "label": "Petit"
+              },
+              "options__2": {
+                "label": "Moyen"
+              },
+              "options__3": {
+                "label": "Grand"
+              }
+            },
+            "box_align": {
+              "label": "Position du contenu sur ordinateur",
+              "options__1": {
+                "label": "En haut à gauche"
+              },
+              "options__2": {
+                "label": "En haut au centre"
+              },
+              "options__3": {
+                "label": "En haut à droite"
+              },
+              "options__4": {
+                "label": "Centré à gauche"
+              },
+              "options__5": {
+                "label": "Centré au milieu"
+              },
+              "options__6": {
+                "label": "Au milieu à droite"
+              },
+              "options__7": {
+                "label": "En bas à gauche"
+              },
+              "options__8": {
+                "label": "En bas au centre"
+              },
+              "options__9": {
+                "label": "En bas à droite"
+              }
+            },
+            "show_text_box": {
+              "label": "Afficher le conteneur sur ordinateur"
+            },
+            "text_alignment": {
+              "label": "Alignement du contenu sur ordinateur",
+              "option_1": {
+                "label": "Gauche"
+              },
+              "option_2": {
+                "label": "Centre"
+              },
+              "option_3": {
+                "label": "Droite"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "Opacité de la superposition d'images"
+            },
+            "color_scheme": {
+              "label": "Combinaison de couleurs",
+              "info": "Visible lorsque le conteneur est affiché.",
+              "options__1": {
+                "label": "Accent 1"
+              },
+              "options__2": {
+                "label": "Accent 2"
+              },
+              "options__3": {
+                "label": "Arrière-plan 1"
+              },
+              "options__4": {
+                "label": "Arrière-plan 2"
+              },
+              "options__5": {
+                "label": "Inverser"
+              }
+            },
+            "text_alignment_mobile": {
+              "label": "Alignement du contenu sur mobile",
+              "options__1": {
+                "label": "Gauche"
+              },
+              "options__2": {
+                "label": "Centre"
+              },
+              "options__3": {
+                "label": "Droite"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "Diaporama"
       }
     }
   }
