--- a/locales/it.json
+++ b/locales/it.json
@@ -47,6 +47,11 @@
       "share_url": "Link",
       "success_message": "Link copiato negli appunti",
       "close": "Chiudi condivisione"
+    },
+    "slider": {
+      "of": "su",
+      "next_slide": "Scorri verso destra",
+      "previous_slide": "Scorri verso sinistra"
     }
   },
   "newsletter": {
@@ -65,13 +70,17 @@
       "new_window": "Si apre in una nuova finestra.",
       "external": "Apre un sito web esterno."
     },
-    "next_slide": "Scorri verso destra",
-    "previous_slide": "Scorri verso sinistra",
     "loading": "Caricamento in corso...",
-    "of": "di",
     "skip_to_product_info": "Passa alle informazioni sul prodotto",
     "total_reviews": "recensioni totali",
-    "star_reviews_info": "{{ rating_value }} stelle su {{ rating_max }}"
+    "star_reviews_info": "{{ rating_value }} stelle su {{ rating_max }}",
+    "load_slide": "Carica slide",
+    "previous_slideshow": "Slide precedente",
+    "next_slideshow": "Slide successiva",
+    "pause_slideshow": "Metti in pausa",
+    "play_slideshow": "Avvia slideshow",
+    "carousel": "Carousel",
+    "slide": "Scorrimento"
   },
   "blogs": {
     "article": {
@@ -265,6 +274,15 @@
     },
     "video": {
       "load_video": "Carica il video: {{ description }}"
+    },
+    "slideshow": {
+      "load_slide": "Carica slide",
+      "previous_slideshow": "Slide precedente",
+      "next_slideshow": "Slide successiva",
+      "pause_slideshow": "Metti in pausa presentazione",
+      "play_slideshow": "Avvia presentazione",
+      "carousel": "Carousel",
+      "slide": "Scorrimento"
     }
   },
   "localization": {
@@ -361,8 +379,8 @@
       "none": "Non hai ancora effettuato ordini."
     },
     "recover_password": {
-      "title": "Ripristina la tua password",
-      "subtext": "Riceverai un'email per ripristinare la tua password",
+      "title": "Reimposta la password",
+      "subtext": "Riceverai un'email per reimpostare la tua password",
       "success": "Ti abbiamo inviato un'email con un link per aggiornare la password."
     },
     "register": {
@@ -374,11 +392,11 @@
       "submit": "Crea"
     },
     "reset_password": {
-      "title": "Ripristina la password dell'account",
+      "title": "Reimposta la password dell'account",
       "subtext": "Inserisci una nuova password per {{ email }}",
       "password": "Password",
       "password_confirm": "Conferma password",
-      "submit": "Ripristina la password"
+      "submit": "Reimposta password"
     }
   },
   "gift_cards": {
