--- a/locales/it.schema.json
+++ b/locales/it.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "Seconda immagine"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "In alto"
-          },
-          "options__2": {
-            "label": "Al centro"
-          },
-          "options__3": {
-            "label": "In basso"
-          },
-          "label": "Posizione testo su desktop"
-        },
         "color_scheme": {
           "options__1": {
             "label": "Elemento in risalto 1"
@@ -729,7 +717,7 @@
             "label": "Inverso"
           },
           "label": "Schema di colori",
-          "info": "Utilizzato per casella di testo."
+          "info": "Visibile quando è visualizzato il contenitore."
         },
         "stack_images_on_mobile": {
           "label": "Elenca immagini su dispositivo mobile"
@@ -739,7 +727,7 @@
           "info": "Se si effettua la selezione, sovrascrive le impostazioni dell'altezza del banner immagine."
         },
         "show_text_box": {
-          "label": "Mostra casella di testo sul desktop"
+          "label": "Mostra contenitore sul desktop"
         },
         "image_overlay_opacity": {
           "label": "Opacità della sovrapposizione immagine"
@@ -748,7 +736,7 @@
           "content": "Layout dispositivo mobile"
         },
         "show_text_below": {
-          "label": "Mostra testo sotto le immagini"
+          "label": "Mostra contenitore su dispositivo mobile"
         },
         "image_height": {
           "label": "Altezza banner",
@@ -762,6 +750,60 @@
             "label": "Grande"
           },
           "info": "Per un risultato ottimale, utilizza un'immagine con proporzioni 3:2. [Maggiori informazioni](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "In alto a sinistra"
+          },
+          "options__2": {
+            "label": "In alto al centro"
+          },
+          "options__3": {
+            "label": "In alto a destra"
+          },
+          "options__4": {
+            "label": "In mezzo a sinistra"
+          },
+          "options__5": {
+            "label": "In mezzo al centro"
+          },
+          "options__6": {
+            "label": "In mezzo a destra"
+          },
+          "options__7": {
+            "label": "In basso a sinistra"
+          },
+          "options__8": {
+            "label": "In basso al centro"
+          },
+          "options__9": {
+            "label": "In basso a destra"
+          },
+          "label": "Posizione contenuto su desktop"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "A sinistra"
+          },
+          "options__2": {
+            "label": "Al centro"
+          },
+          "options__3": {
+            "label": "A destra"
+          },
+          "label": "Allineamento contenuto su desktop"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "A sinistra"
+          },
+          "options__2": {
+            "label": "Al centro"
+          },
+          "options__3": {
+            "label": "A destra"
+          },
+          "label": "Allineamento contenuto su mobile"
         }
       },
       "blocks": {
@@ -787,6 +829,18 @@
           "settings": {
             "text": {
               "label": "Descrizione"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Testo"
+              },
+              "options__2": {
+                "label": "Sottotitolo"
+              },
+              "options__3": {
+                "label": "Maiuscolo"
+              },
+              "label": "Stile del testo"
             }
           }
         },
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "Mostra immagine di sfondo"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "In alto"
-          },
-          "options__2": {
-            "label": "Al centro"
-          },
-          "options__3": {
-            "label": "In basso"
-          },
-          "label": "Posizione testo su desktop"
-        },
         "show_text_box": {
-          "label": "Mostra casella di testo sul desktop"
+          "label": "Mostra contenitore sul desktop"
         },
         "image_overlay_opacity": {
           "label": "Opacità della sovrapposizione immagine"
@@ -1937,10 +1979,11 @@
             "label": "Inverso"
           },
           "label": "Schema di colori",
-          "info": "Visibile quando è visualizzata la casella di testo"
+          "info": "Visibile quando è visualizzato il contenitore"
         },
         "show_text_below": {
-          "label": "Mostra testo sotto le immagini sui dispositivi mobili"
+          "label": "Mostra contenuto sotto le immagini sui dispositivi mobili",
+          "info": "Per un risultato ottimale utilizza un'immagine con proporzioni 16:9. [Maggiori informazioni](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "Altezza banner",
@@ -1957,6 +2000,63 @@
             "label": "Grande"
           },
           "info": "Per un risultato ottimale utilizza un'immagine con proporzioni 16:9. [Maggiori informazioni](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__4": {
+            "label": "In mezzo a sinistra"
+          },
+          "options__5": {
+            "label": "In mezzo al centro"
+          },
+          "options__6": {
+            "label": "In mezzo a destra"
+          },
+          "options__7": {
+            "label": "In basso a sinistra"
+          },
+          "options__8": {
+            "label": "In basso al centro"
+          },
+          "options__9": {
+            "label": "In basso a destra"
+          },
+          "options__1": {
+            "label": "In alto a sinistra"
+          },
+          "options__2": {
+            "label": "In alto al centro"
+          },
+          "options__3": {
+            "label": "In alto a destra"
+          },
+          "label": "Posizione contenuto su desktop"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "A sinistra"
+          },
+          "options__2": {
+            "label": "Al centro"
+          },
+          "options__3": {
+            "label": "A destra"
+          },
+          "label": "Allineamento contenuto su desktop"
+        },
+        "header": {
+          "content": "Layout dispositivo mobile"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "A sinistra"
+          },
+          "options__2": {
+            "label": "Al centro"
+          },
+          "options__3": {
+            "label": "A destra"
+          },
+          "label": "Allineamento contenuto su mobile"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "Descrizione"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Testo"
+              },
+              "options__2": {
+                "label": "Sottotitolo"
+              },
+              "label": "Stile del testo"
             }
           }
         },
@@ -1982,6 +2091,273 @@
       },
       "presets": {
         "name": "Banner di iscrizione alla newsletter"
+      }
+    },
+    "slideshow": {
+      "name": "Presentazione",
+      "settings": {
+        "layout": {
+          "label": "Layout",
+          "options__1": {
+            "label": "Larghezza intera"
+          },
+          "options__2": {
+            "label": "Griglia"
+          }
+        },
+        "slide_height": {
+          "label": "Altezza slide",
+          "options__1": {
+            "label": "Adatta alla prima immagine"
+          },
+          "options__2": {
+            "label": "Piccola"
+          },
+          "options__3": {
+            "label": "Media"
+          },
+          "options__4": {
+            "label": "Grande"
+          }
+        },
+        "slider_visual": {
+          "label": "Stile impaginazione",
+          "options__1": {
+            "label": "Contatore"
+          },
+          "options__2": {
+            "label": "Punti"
+          },
+          "options__3": {
+            "label": "Numeri"
+          }
+        },
+        "heading_size": {
+          "label": "Dimensione font titolo",
+          "options__1": {
+            "label": "Media"
+          },
+          "options__2": {
+            "label": "Grande"
+          }
+        },
+        "box_align": {
+          "label": "Posizione contenuto su desktop",
+          "options__1": {
+            "label": "In alto a sinistra"
+          },
+          "options__2": {
+            "label": "In alto al centro"
+          },
+          "options__3": {
+            "label": "In alto a destra"
+          },
+          "options__4": {
+            "label": "In mezzo a sinistra"
+          },
+          "options__5": {
+            "label": "In mezzo al centro"
+          },
+          "options__6": {
+            "label": "In mezzo a destra"
+          },
+          "options__7": {
+            "label": "In basso a sinistra"
+          },
+          "options__8": {
+            "label": "In basso al centro"
+          },
+          "options__9": {
+            "label": "In basso a destra"
+          }
+        },
+        "show_text_box": {
+          "label": "Mostra contenitore sul desktop"
+        },
+        "text_alignment": {
+          "label": "Allineamento contenuto su desktop",
+          "option_1": {
+            "label": "A sinistra"
+          },
+          "option_2": {
+            "label": "Al centro"
+          },
+          "option_3": {
+            "label": "A destra"
+          }
+        },
+        "image_overlay_opacity": {
+          "label": "Opacità della sovrapposizione immagine"
+        },
+        "auto_rotate": {
+          "label": "Ruota slide automaticamente"
+        },
+        "change_slides_speed": {
+          "label": "Cambia slide ogni"
+        },
+        "color_scheme": {
+          "label": "Schema di colori della casella",
+          "info": "Visibile quando è visualizzato il contenitore.",
+          "options__1": {
+            "label": "Elemento in risalto 1"
+          },
+          "options__2": {
+            "label": "Elemento in risalto 2"
+          },
+          "options__3": {
+            "label": "Sfondo 1"
+          },
+          "options__4": {
+            "label": "Sfondo 2"
+          },
+          "options__5": {
+            "label": "Inverso"
+          }
+        },
+        "mobile": {
+          "content": "Layout dispositivo mobile"
+        },
+        "text_alignment_mobile": {
+          "label": "Allineamento contenuto su mobile",
+          "options__1": {
+            "label": "A sinistra"
+          },
+          "options__2": {
+            "label": "Al centro"
+          },
+          "options__3": {
+            "label": "A destra"
+          }
+        },
+        "show_text_below": {
+          "label": "Mostra contenuto sotto le immagini sui dispositivi mobili"
+        },
+        "accessibility": {
+          "content": "Accessibilità",
+          "label": "Descrizione presentazione",
+          "info": "Descrivi la presentazione per i clienti che utilizzano i lettori di schermo."
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "Scorrimento",
+          "settings": {
+            "image": {
+              "label": "Image"
+            },
+            "heading": {
+              "label": "Titolo"
+            },
+            "subheading": {
+              "label": "Sottotitolo"
+            },
+            "button_label": {
+              "label": "Etichetta pulsante",
+              "info": "Lascia vuota l'etichetta per nascondere il pulsante."
+            },
+            "link": {
+              "label": "Link pulsante",
+              "info": "Lascia vuota l'etichetta per nascondere il pulsante."
+            },
+            "secondary_style": {
+              "label": "Utilizza stile contorno pulsante"
+            },
+            "heading_size": {
+              "label": "Dimensione del titolo",
+              "options__1": {
+                "label": "Piccola"
+              },
+              "options__2": {
+                "label": "Media"
+              },
+              "options__3": {
+                "label": "Grande"
+              }
+            },
+            "box_align": {
+              "label": "Posizione contenuto su desktop",
+              "options__1": {
+                "label": "In alto a sinistra"
+              },
+              "options__2": {
+                "label": "In alto al centro"
+              },
+              "options__3": {
+                "label": "In alto a destra"
+              },
+              "options__4": {
+                "label": "In mezzo a sinistra"
+              },
+              "options__5": {
+                "label": "In mezzo al centro"
+              },
+              "options__6": {
+                "label": "In mezzo a destra"
+              },
+              "options__7": {
+                "label": "In basso a sinistra"
+              },
+              "options__8": {
+                "label": "In basso al centro"
+              },
+              "options__9": {
+                "label": "In basso a destra"
+              }
+            },
+            "show_text_box": {
+              "label": "Mostra contenitore sul desktop"
+            },
+            "text_alignment": {
+              "label": "Allineamento contenuto su desktop",
+              "option_1": {
+                "label": "A sinistra"
+              },
+              "option_2": {
+                "label": "Al centro"
+              },
+              "option_3": {
+                "label": "A destra"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "Opacità della sovrapposizione immagine"
+            },
+            "color_scheme": {
+              "label": "Schema colori",
+              "info": "Visibile quando è visualizzato il contenitore.",
+              "options__1": {
+                "label": "Elemento in risalto 1"
+              },
+              "options__2": {
+                "label": "Elemento in risalto 2"
+              },
+              "options__3": {
+                "label": "Sfondo 1"
+              },
+              "options__4": {
+                "label": "Sfondo 2"
+              },
+              "options__5": {
+                "label": "Inverso"
+              }
+            },
+            "text_alignment_mobile": {
+              "label": "Allineamento contenuto su mobile",
+              "options__1": {
+                "label": "A sinistra"
+              },
+              "options__2": {
+                "label": "Al centro"
+              },
+              "options__3": {
+                "label": "A destra"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "Presentazione"
       }
     }
   }
