--- a/locales/ja.schema.json
+++ b/locales/ja.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "2番目の画像"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "上"
-          },
-          "options__2": {
-            "label": "中央"
-          },
-          "options__3": {
-            "label": "下"
-          },
-          "label": "デスクトップのテキスト位置"
-        },
         "color_scheme": {
           "options__1": {
             "label": "アクセント1"
@@ -729,7 +717,7 @@
             "label": "反転"
           },
           "label": "配色",
-          "info": "テキストボックスに使用されています"
+          "info": "コンテナが表示された時に表示。"
         },
         "stack_images_on_mobile": {
           "label": "モバイルで画像を重ねる"
@@ -739,7 +727,7 @@
           "info": "チェックすると、画像バナーの高さ設定が上書きされます。"
         },
         "show_text_box": {
-          "label": "デスクトップ上にテキストボックスを表示する"
+          "label": "デスクトップ上にコンテナを表示"
         },
         "image_overlay_opacity": {
           "label": "画像のオーバーレイ不透明率"
@@ -748,7 +736,7 @@
           "content": "モバイルのレイアウト"
         },
         "show_text_below": {
-          "label": "画像下にテキストを表示する"
+          "label": "モバイル上にコンテナを表示"
         },
         "image_height": {
           "label": "バナーの高さ",
@@ -762,6 +750,60 @@
             "label": "大"
           },
           "info": "画像のアスペクト比が3:2のものを使用すると最適です。[詳しくはこちら](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "左上"
+          },
+          "options__2": {
+            "label": "中央上"
+          },
+          "options__3": {
+            "label": "右上"
+          },
+          "options__4": {
+            "label": "左中央"
+          },
+          "options__5": {
+            "label": "中央"
+          },
+          "options__6": {
+            "label": "右中央"
+          },
+          "options__7": {
+            "label": "左下"
+          },
+          "options__8": {
+            "label": "中央下"
+          },
+          "options__9": {
+            "label": "右下"
+          },
+          "label": "デスクトップのコンテンツ位置"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "左"
+          },
+          "options__2": {
+            "label": "中央"
+          },
+          "options__3": {
+            "label": "右"
+          },
+          "label": "デスクトップのコンテンツアラインメント"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "左"
+          },
+          "options__2": {
+            "label": "中央"
+          },
+          "options__3": {
+            "label": "右"
+          },
+          "label": "モバイルのコンテンツアライメント"
         }
       },
       "blocks": {
@@ -786,6 +828,18 @@
           "settings": {
             "text": {
               "label": "説明"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "本文"
+              },
+              "options__2": {
+                "label": "字幕"
+              },
+              "options__3": {
+                "label": "大文字"
+              },
+              "label": "テキストスタイル"
             }
           },
           "name": "テキスト"
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "背景画像を表示"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "上"
-          },
-          "options__2": {
-            "label": "中央"
-          },
-          "options__3": {
-            "label": "下"
-          },
-          "label": "デスクトップのテキスト位置"
-        },
         "show_text_box": {
-          "label": "デスクトップ上にテキストボックスを表示する"
+          "label": "デスクトップ上にコンテナを表示"
         },
         "image_overlay_opacity": {
           "label": "画像のオーバーレイ不透明率"
@@ -1937,10 +1979,11 @@
             "label": "反転"
           },
           "label": "配色",
-          "info": "テキストボックスが表示時に表示される"
+          "info": "コンテナが表示された時に表示"
         },
         "show_text_below": {
-          "label": "モバイルで画像の下にテキストを表示する"
+          "label": "モバイルで画像の下にコンテンツを表示",
+          "info": "画像のアスペクト比が16:9のものを使用すると最適です。[詳しくはこちら](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "バナーの高さ",
@@ -1957,6 +2000,63 @@
             "label": "大"
           },
           "info": "画像のアスペクト比が16:9のものを使用すると最適です。[詳しくはこちら](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "左上"
+          },
+          "options__2": {
+            "label": "中央上"
+          },
+          "options__3": {
+            "label": "右上"
+          },
+          "options__4": {
+            "label": "左中央"
+          },
+          "options__5": {
+            "label": "中央"
+          },
+          "options__6": {
+            "label": "右中央"
+          },
+          "options__7": {
+            "label": "左下"
+          },
+          "options__8": {
+            "label": "中央下"
+          },
+          "options__9": {
+            "label": "右下"
+          },
+          "label": "デスクトップのコンテンツ位置"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "左"
+          },
+          "options__2": {
+            "label": "中央"
+          },
+          "options__3": {
+            "label": "右"
+          },
+          "label": "デスクトップのコンテンツアラインメント"
+        },
+        "header": {
+          "content": "モバイルのレイアウト"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "左"
+          },
+          "options__2": {
+            "label": "中央"
+          },
+          "options__3": {
+            "label": "右"
+          },
+          "label": "モバイルのコンテンツアライメント"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "説明"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "本文"
+              },
+              "options__2": {
+                "label": "字幕"
+              },
+              "label": "テキストスタイル"
             }
           }
         },
@@ -1982,6 +2091,273 @@
       },
       "presets": {
         "name": "メール登録者バナー"
+      }
+    },
+    "slideshow": {
+      "name": "スライドショー",
+      "settings": {
+        "layout": {
+          "label": "レイアウト",
+          "options__1": {
+            "label": "全幅"
+          },
+          "options__2": {
+            "label": "グリッド"
+          }
+        },
+        "slide_height": {
+          "label": "スライドの高さ",
+          "options__1": {
+            "label": "最初の画像に対応"
+          },
+          "options__2": {
+            "label": "小"
+          },
+          "options__3": {
+            "label": "中"
+          },
+          "options__4": {
+            "label": "大"
+          }
+        },
+        "slider_visual": {
+          "label": "ページネーションのスタイル",
+          "options__1": {
+            "label": "カウンター"
+          },
+          "options__2": {
+            "label": "ドット"
+          },
+          "options__3": {
+            "label": "数字"
+          }
+        },
+        "heading_size": {
+          "label": "見出しのフォントサイズ",
+          "options__1": {
+            "label": "中"
+          },
+          "options__2": {
+            "label": "大"
+          }
+        },
+        "box_align": {
+          "label": "デスクトップのコンテンツ位置",
+          "options__1": {
+            "label": "左上"
+          },
+          "options__2": {
+            "label": "上部中央"
+          },
+          "options__3": {
+            "label": "右上"
+          },
+          "options__4": {
+            "label": "中央部左側"
+          },
+          "options__5": {
+            "label": "中心"
+          },
+          "options__6": {
+            "label": "中央部右側"
+          },
+          "options__7": {
+            "label": "左下"
+          },
+          "options__8": {
+            "label": "下部中央"
+          },
+          "options__9": {
+            "label": "右下"
+          }
+        },
+        "show_text_box": {
+          "label": "デスクトップ上にコンテナを表示"
+        },
+        "text_alignment": {
+          "label": "デスクトップのコンテンツアラインメント",
+          "option_1": {
+            "label": "左"
+          },
+          "option_2": {
+            "label": "中央"
+          },
+          "option_3": {
+            "label": "右"
+          }
+        },
+        "image_overlay_opacity": {
+          "label": "画像のオーバーレイ不透明率"
+        },
+        "auto_rotate": {
+          "label": "スライドの自動切り替え"
+        },
+        "change_slides_speed": {
+          "label": "スライドを変更する間隔"
+        },
+        "color_scheme": {
+          "label": "ボックスの配色",
+          "info": "コンテナが表示された時に表示。",
+          "options__1": {
+            "label": "アクセント1"
+          },
+          "options__2": {
+            "label": "アクセント2"
+          },
+          "options__3": {
+            "label": "背景1"
+          },
+          "options__4": {
+            "label": "背景2"
+          },
+          "options__5": {
+            "label": "反転"
+          }
+        },
+        "mobile": {
+          "content": "モバイルのレイアウト"
+        },
+        "text_alignment_mobile": {
+          "label": "モバイルのコンテンツアライメント",
+          "options__1": {
+            "label": "左"
+          },
+          "options__2": {
+            "label": "中央"
+          },
+          "options__3": {
+            "label": "右"
+          }
+        },
+        "show_text_below": {
+          "label": "モバイルで画像の下にコンテンツを表示する"
+        },
+        "accessibility": {
+          "content": "アクセシビリティ",
+          "label": "スライドショーの説明",
+          "info": "スクリーンリーダーを使用しているお客様向けにスライドショーの説明を記入してください。"
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "スライド",
+          "settings": {
+            "image": {
+              "label": "画像"
+            },
+            "heading": {
+              "label": "見出し"
+            },
+            "subheading": {
+              "label": "小見出し"
+            },
+            "button_label": {
+              "label": "ボタンのラベル",
+              "info": "ボタンを非表示にするには、ラベルを空白にします。"
+            },
+            "link": {
+              "label": "ボタンのリンク",
+              "info": "ボタンを非表示にするには、ラベルを空白にします。"
+            },
+            "secondary_style": {
+              "label": "アウトラインボタンのスタイルを使用する"
+            },
+            "heading_size": {
+              "label": "見出しのサイズ",
+              "options__1": {
+                "label": "小"
+              },
+              "options__2": {
+                "label": "中"
+              },
+              "options__3": {
+                "label": "大"
+              }
+            },
+            "box_align": {
+              "label": "デスクトップのコンテンツ位置",
+              "options__1": {
+                "label": "左上"
+              },
+              "options__2": {
+                "label": "上部中央"
+              },
+              "options__3": {
+                "label": "右上"
+              },
+              "options__4": {
+                "label": "中央部左側"
+              },
+              "options__5": {
+                "label": "中央"
+              },
+              "options__6": {
+                "label": "中央部右側"
+              },
+              "options__7": {
+                "label": "左下"
+              },
+              "options__8": {
+                "label": "下部中央"
+              },
+              "options__9": {
+                "label": "右下"
+              }
+            },
+            "show_text_box": {
+              "label": "デスクトップ上にコンテナを表示"
+            },
+            "text_alignment": {
+              "label": "デスクトップのコンテンツ配置",
+              "option_1": {
+                "label": "左"
+              },
+              "option_2": {
+                "label": "中央"
+              },
+              "option_3": {
+                "label": "右"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "画像のオーバーレイ不透明率"
+            },
+            "color_scheme": {
+              "label": "配色",
+              "info": "コンテナが表示された時に表示。",
+              "options__1": {
+                "label": "アクセント1"
+              },
+              "options__2": {
+                "label": "アクセント2"
+              },
+              "options__3": {
+                "label": "背景1"
+              },
+              "options__4": {
+                "label": "背景2"
+              },
+              "options__5": {
+                "label": "反転"
+              }
+            },
+            "text_alignment_mobile": {
+              "label": "モバイルのコンテンツ配置",
+              "options__1": {
+                "label": "左"
+              },
+              "options__2": {
+                "label": "中央"
+              },
+              "options__3": {
+                "label": "右"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "スライドショー"
       }
     }
   }
