--- a/locales/ko.schema.json
+++ b/locales/ko.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "두 번째 이미지"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "위쪽"
-          },
-          "options__2": {
-            "label": "중앙"
-          },
-          "options__3": {
-            "label": "아래쪽"
-          },
-          "label": "데스크톱 텍스트 위치"
-        },
         "color_scheme": {
           "options__1": {
             "label": "강조 1"
@@ -729,7 +717,7 @@
             "label": "서로 바꾸기"
           },
           "label": "색상 배합",
-          "info": "텍스트 상자에 사용됩니다."
+          "info": "컨테이너가 표시될 때 볼 수 있습니다."
         },
         "stack_images_on_mobile": {
           "label": "모바일 스택 이미지"
@@ -739,7 +727,7 @@
           "info": "확인란을 선택하면 이미지 배너 높이 설정을 덮어씁니다."
         },
         "show_text_box": {
-          "label": "바탕 화면에 텍스트 상자 표시"
+          "label": "데스크톱에 컨테이너 표시"
         },
         "image_overlay_opacity": {
           "label": "이미지 오버레이 투명도"
@@ -748,7 +736,7 @@
           "content": "모바일 레이아웃"
         },
         "show_text_below": {
-          "label": "텍스트를 이미지 아래에 표시"
+          "label": "모바일에서 컨테이너 표시"
         },
         "image_height": {
           "label": "배너 높이",
@@ -762,6 +750,60 @@
             "label": "크게"
           },
           "info": "최고의 결과를 얻으려면 이미지의 가로 세로 비율을 3:2로 사용하십시오. [자세히 알아보기](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "왼쪽 상단"
+          },
+          "options__2": {
+            "label": "가운데 상단"
+          },
+          "options__3": {
+            "label": "오른쪽 상단"
+          },
+          "options__4": {
+            "label": "왼쪽 중간"
+          },
+          "options__5": {
+            "label": "가운데 중간"
+          },
+          "options__6": {
+            "label": "오른쪽 중간"
+          },
+          "options__7": {
+            "label": "왼쪽 하단"
+          },
+          "options__8": {
+            "label": "가운데 하단"
+          },
+          "options__9": {
+            "label": "오른쪽 하단"
+          },
+          "label": "데스크톱 콘텐츠 위치"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "왼쪽"
+          },
+          "options__2": {
+            "label": "가운데"
+          },
+          "options__3": {
+            "label": "오른쪽"
+          },
+          "label": "데스크톱 콘텐츠 정렬"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "왼쪽"
+          },
+          "options__2": {
+            "label": "가운데"
+          },
+          "options__3": {
+            "label": "오른쪽"
+          },
+          "label": "모바일 콘텐츠 정렬"
         }
       },
       "blocks": {
@@ -786,6 +828,18 @@
           "settings": {
             "text": {
               "label": "설명"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "본문"
+              },
+              "options__2": {
+                "label": "소제목"
+              },
+              "options__3": {
+                "label": "대문자"
+              },
+              "label": "텍스트 스타일"
             }
           },
           "name": "텍스트"
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "배경 이미지 표시"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "위쪽"
-          },
-          "options__2": {
-            "label": "중앙"
-          },
-          "options__3": {
-            "label": "아래쪽"
-          },
-          "label": "데스크톱 텍스트 위치"
-        },
         "show_text_box": {
-          "label": "바탕 화면에 텍스트 상자 표시"
+          "label": "데스크톱에 컨테이너 표시"
         },
         "image_overlay_opacity": {
           "label": "이미지 오버레이 투명도"
@@ -1937,10 +1979,11 @@
             "label": "서로 바꾸기"
           },
           "label": "색상 배합",
-          "info": "텍스트 상자가 표시될 때 보이게 하기"
+          "info": "컨테이너가 표시될 때 보이게 하기"
         },
         "show_text_below": {
-          "label": "모바일에서 이미지 아래에 텍스트 표시"
+          "label": "모바일에서 이미지 아래에 콘텐츠 표시",
+          "info": "최고의 결과를 얻으려면 이미지의 가로 세로 비율을 16:9로 사용하십시오. [자세히 알아보기](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "배너 높이",
@@ -1957,6 +2000,63 @@
             "label": "크게"
           },
           "info": "최고의 결과를 얻으려면 이미지의 가로 세로 비율을 16:9로 사용하십시오. [자세히 알아보기](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__4": {
+            "label": "왼쪽 중간"
+          },
+          "options__5": {
+            "label": "가운데 중간"
+          },
+          "options__6": {
+            "label": "오른쪽 중간"
+          },
+          "options__7": {
+            "label": "왼쪽 하단"
+          },
+          "options__8": {
+            "label": "가운데 하단"
+          },
+          "options__9": {
+            "label": "오른쪽 하단"
+          },
+          "options__1": {
+            "label": "왼쪽 상단"
+          },
+          "options__2": {
+            "label": "가운데 상단"
+          },
+          "options__3": {
+            "label": "오른쪽 상단"
+          },
+          "label": "데스크톱 콘텐츠 위치"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "왼쪽"
+          },
+          "options__2": {
+            "label": "가운데"
+          },
+          "options__3": {
+            "label": "오른쪽"
+          },
+          "label": "데스크톱 콘텐츠 정렬"
+        },
+        "header": {
+          "content": "모바일 레이아웃"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "왼쪽"
+          },
+          "options__2": {
+            "label": "가운데"
+          },
+          "options__3": {
+            "label": "오른쪽"
+          },
+          "label": "모바일 콘텐츠 정렬"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "설명"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "본문"
+              },
+              "options__2": {
+                "label": "소제목"
+              },
+              "label": "텍스트 스타일"
             }
           }
         },
@@ -1982,6 +2091,273 @@
       },
       "presets": {
         "name": "이메일 가입 배너"
+      }
+    },
+    "slideshow": {
+      "name": "슬라이드 쇼",
+      "settings": {
+        "layout": {
+          "label": "레이아웃",
+          "options__1": {
+            "label": "전체 폭"
+          },
+          "options__2": {
+            "label": "그리드"
+          }
+        },
+        "slide_height": {
+          "label": "슬라이드 높이",
+          "options__1": {
+            "label": "첫 번째 이미지에 맞춤"
+          },
+          "options__2": {
+            "label": "작게"
+          },
+          "options__3": {
+            "label": "보통"
+          },
+          "options__4": {
+            "label": "크게"
+          }
+        },
+        "slider_visual": {
+          "label": "페이지 매김 스타일",
+          "options__1": {
+            "label": "카운터기"
+          },
+          "options__2": {
+            "label": "점"
+          },
+          "options__3": {
+            "label": "번호"
+          }
+        },
+        "heading_size": {
+          "label": "제목 글꼴 크기",
+          "options__1": {
+            "label": "보통"
+          },
+          "options__2": {
+            "label": "크게"
+          }
+        },
+        "box_align": {
+          "label": "데스크톱 콘텐츠 위치",
+          "options__1": {
+            "label": "왼쪽 상단"
+          },
+          "options__2": {
+            "label": "가운데 상단"
+          },
+          "options__3": {
+            "label": "오른쪽 상단"
+          },
+          "options__4": {
+            "label": "왼쪽 중간"
+          },
+          "options__5": {
+            "label": "가운데 중간"
+          },
+          "options__6": {
+            "label": "오른쪽 중간"
+          },
+          "options__7": {
+            "label": "왼쪽 하단"
+          },
+          "options__8": {
+            "label": "가운데 하단"
+          },
+          "options__9": {
+            "label": "오른쪽 하단"
+          }
+        },
+        "show_text_box": {
+          "label": "데스크톱에 컨테이너 표시"
+        },
+        "text_alignment": {
+          "label": "데스크톱 콘텐츠 정렬",
+          "option_1": {
+            "label": "왼쪽"
+          },
+          "option_2": {
+            "label": "가운데"
+          },
+          "option_3": {
+            "label": "오른쪽"
+          }
+        },
+        "image_overlay_opacity": {
+          "label": "이미지 오버레이 투명도"
+        },
+        "auto_rotate": {
+          "label": "슬라이드 자동 회전"
+        },
+        "change_slides_speed": {
+          "label": "슬라이드를 매번 변경"
+        },
+        "color_scheme": {
+          "label": "상자 색상 배합",
+          "info": "컨테이너가 표시될 때 볼 수 있습니다.",
+          "options__1": {
+            "label": "강조 1"
+          },
+          "options__2": {
+            "label": "강조 2"
+          },
+          "options__3": {
+            "label": "배경 1"
+          },
+          "options__4": {
+            "label": "배경 2"
+          },
+          "options__5": {
+            "label": "서로 바꾸기"
+          }
+        },
+        "mobile": {
+          "content": "모바일 레이아웃"
+        },
+        "text_alignment_mobile": {
+          "label": "모바일 콘텐츠 정렬",
+          "options__1": {
+            "label": "왼쪽"
+          },
+          "options__2": {
+            "label": "가운데"
+          },
+          "options__3": {
+            "label": "오른쪽"
+          }
+        },
+        "show_text_below": {
+          "label": "모바일에서 이미지 아래에 콘텐츠 표시"
+        },
+        "accessibility": {
+          "content": "접근성",
+          "label": "슬라이드 쇼 설명",
+          "info": "스크린리더를 사용하는 고객에게 슬라이드 쇼를 설명합니다."
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "슬라이드",
+          "settings": {
+            "image": {
+              "label": "이미지"
+            },
+            "heading": {
+              "label": "제목"
+            },
+            "subheading": {
+              "label": "소제목"
+            },
+            "button_label": {
+              "label": "버튼 레이블",
+              "info": "버튼을 숨기려면 레이블을 비워 둡니다."
+            },
+            "link": {
+              "label": "버튼 링크",
+              "info": "버튼을 숨기려면 레이블을 비워 둡니다."
+            },
+            "secondary_style": {
+              "label": "윤곽 버튼 스타일 사용"
+            },
+            "heading_size": {
+              "label": "제목 사이즈",
+              "options__1": {
+                "label": "작게"
+              },
+              "options__2": {
+                "label": "보통"
+              },
+              "options__3": {
+                "label": "크게"
+              }
+            },
+            "box_align": {
+              "label": "데스크톱 콘텐츠 위치",
+              "options__1": {
+                "label": "왼쪽 상단"
+              },
+              "options__2": {
+                "label": "가운데 상단"
+              },
+              "options__3": {
+                "label": "오른쪽 상단"
+              },
+              "options__4": {
+                "label": "왼쪽 중간"
+              },
+              "options__5": {
+                "label": "가운데 중간"
+              },
+              "options__6": {
+                "label": "오른쪽 중간"
+              },
+              "options__7": {
+                "label": "왼쪽 하단"
+              },
+              "options__8": {
+                "label": "가운데 하단"
+              },
+              "options__9": {
+                "label": "오른쪽 하단"
+              }
+            },
+            "show_text_box": {
+              "label": "데스크톱에 컨테이너 표시"
+            },
+            "text_alignment": {
+              "label": "데스크톱 콘텐츠 정렬",
+              "option_1": {
+                "label": "왼쪽"
+              },
+              "option_2": {
+                "label": "가운데"
+              },
+              "option_3": {
+                "label": "오른쪽"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "이미지 오버레이 투명도"
+            },
+            "color_scheme": {
+              "label": "색상 배합",
+              "info": "컨테이너가 표시될 때 볼 수 있습니다.",
+              "options__1": {
+                "label": "강조 1"
+              },
+              "options__2": {
+                "label": "강조 2"
+              },
+              "options__3": {
+                "label": "배경 1"
+              },
+              "options__4": {
+                "label": "배경 2"
+              },
+              "options__5": {
+                "label": "서로 바꾸기"
+              }
+            },
+            "text_alignment_mobile": {
+              "label": "모바일 콘텐츠 정렬",
+              "options__1": {
+                "label": "왼쪽"
+              },
+              "options__2": {
+                "label": "가운데"
+              },
+              "options__3": {
+                "label": "오른쪽"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "슬라이드 쇼"
       }
     }
   }
