--- a/locales/pt-BR.json
+++ b/locales/pt-BR.json
@@ -47,6 +47,11 @@
       "share_url": "Link",
       "success_message": "Link copiado para a área de transferência",
       "close": "Fechar compartilhamento"
+    },
+    "slider": {
+      "of": "de",
+      "next_slide": "Deslizar para a direita",
+      "previous_slide": "Deslizar para a esquerda"
     }
   },
   "newsletter": {
@@ -65,13 +70,17 @@
       "new_window": "Abre em uma nova janela.",
       "external": "Abre um site externo."
     },
-    "next_slide": "Deslizar para a direita",
-    "previous_slide": "Deslizar para a esquerda",
     "loading": "Carregando...",
-    "of": "de",
     "skip_to_product_info": "Pular para as informações do produto",
     "total_reviews": "total de avaliações",
-    "star_reviews_info": "{{ rating_value }} de {{ rating_max }} estrelas"
+    "star_reviews_info": "{{ rating_value }} de {{ rating_max }} estrelas",
+    "load_slide": "Carregar slide",
+    "previous_slideshow": "Slide anterior",
+    "next_slideshow": "Próximo slide",
+    "pause_slideshow": "Pausar apresentação de slides",
+    "play_slideshow": "Reproduzir apresentação de slides",
+    "carousel": "Carrossel",
+    "slide": "Slide"
   },
   "blogs": {
     "article": {
@@ -225,7 +234,7 @@
       "note": "Instruções especiais do pedido",
       "checkout": "Finalizar a compra",
       "empty": "O carrinho está vazio",
-      "cart_error": "Ocorreu um erro ao atualizar o carrinho. Tente novamente.",
+      "cart_error": "Ocorreu um erro ao atualizar o carrinho. Tente de novo.",
       "cart_quantity_error_html": "É possível adicionar apenas {{ quantity }} unidade(s) desse item ao carrinho.",
       "taxes_and_shipping_policy_at_checkout_html": "Tributos e <a href=\"{{ link }}\">frete</a> calculados na finalização da compra",
       "taxes_included_but_shipping_at_checkout": "Tributos incluídos e frete calculado na finalização da compra",
@@ -265,10 +274,19 @@
     },
     "video": {
       "load_video": "Carregar vídeo: {{ description }}"
+    },
+    "slideshow": {
+      "load_slide": "Carregar slide",
+      "previous_slideshow": "Slide anterior",
+      "next_slideshow": "Próximo slide",
+      "pause_slideshow": "Pausar apresentação de slides",
+      "play_slideshow": "Reproduzir apresentação de slides",
+      "carousel": "Carrossel",
+      "slide": "Slide"
     }
   },
   "localization": {
-    "country_label": "País/região",
+    "country_label": "País/Região",
     "language_label": "Idioma",
     "update_language": "Atualizar idioma",
     "update_country": "Atualizar país/região"
@@ -300,7 +318,7 @@
       "address1": "Endereço 1",
       "address2": "Endereço 2",
       "city": "Cidade",
-      "country": "País/região",
+      "country": "País/Região",
       "province": "Província",
       "zip": "CEP",
       "phone": "Telefone",
