--- a/locales/pt-PT.schema.json
+++ b/locales/pt-PT.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "Segunda imagem"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Acima"
-          },
-          "options__2": {
-            "label": "Centro"
-          },
-          "options__3": {
-            "label": "Abaixo"
-          },
-          "label": "Posição do texto em desktop"
-        },
         "color_scheme": {
           "options__1": {
             "label": "Destaque 1"
@@ -729,7 +717,7 @@
             "label": "Inverter"
           },
           "label": "Esquema de cores",
-          "info": "Usado para a caixa de texto."
+          "info": "Visível quando o recetor é exibido."
         },
         "stack_images_on_mobile": {
           "label": "Empilhar imagens em dispositivos móveis"
@@ -739,7 +727,7 @@
           "info": "Quando marcada, substitui a definição de altura do banner da imagem."
         },
         "show_text_box": {
-          "label": "Mostrar caixa de texto no desktop"
+          "label": "Mostrar recetores no desktop"
         },
         "image_overlay_opacity": {
           "label": "Opacidade da sobreposição da imagem"
@@ -748,7 +736,7 @@
           "content": "Esquema para dispositivo móvel"
         },
         "show_text_below": {
-          "label": "Mostrar texto abaixo das imagens"
+          "label": "Mostrar recetor em dispositivo móvel"
         },
         "image_height": {
           "label": "Altura da faixa",
@@ -762,6 +750,60 @@
             "label": "Grande"
           },
           "info": "Para obter os melhores resultados, use uma imagem com uma proporção de 3:2. [Saber mais](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Canto superior esquerdo"
+          },
+          "options__2": {
+            "label": "Superior centro"
+          },
+          "options__3": {
+            "label": "Canto superior direito"
+          },
+          "options__4": {
+            "label": "Intermédio à esquerda"
+          },
+          "options__5": {
+            "label": "Intermédio ao centro"
+          },
+          "options__6": {
+            "label": "Intermédio à direita"
+          },
+          "options__7": {
+            "label": "Canto inferior esquerdo"
+          },
+          "options__8": {
+            "label": "Inferior centro"
+          },
+          "options__9": {
+            "label": "Canto inferior direito"
+          },
+          "label": "Posição do conteúdo em computadores"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Esquerda"
+          },
+          "options__2": {
+            "label": "Ao centro"
+          },
+          "options__3": {
+            "label": "Direita"
+          },
+          "label": "Alinhamento do conteúdo em computadores"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Esquerda"
+          },
+          "options__2": {
+            "label": "Ao centro"
+          },
+          "options__3": {
+            "label": "Direita"
+          },
+          "label": "Alinhamento do conteúdo em dispositivos móveis"
         }
       },
       "blocks": {
@@ -786,6 +828,18 @@
           "settings": {
             "text": {
               "label": "Descrição"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Corpo"
+              },
+              "options__2": {
+                "label": "Legenda"
+              },
+              "options__3": {
+                "label": "Maiúsculas"
+              },
+              "label": "Estilo de texto"
             }
           },
           "name": "Texto"
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "Mostrar imagem de fundo"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Em cima"
-          },
-          "options__2": {
-            "label": "Ao centro"
-          },
-          "options__3": {
-            "label": "Em baixo"
-          },
-          "label": "Posição do texto no ambiente de trabalho"
-        },
         "show_text_box": {
-          "label": "Mostrar caixa de texto no ambiente de trabalho"
+          "label": "Mostrar recetores no desktop"
         },
         "image_overlay_opacity": {
           "label": "Opacidade da sobreposição da imagem"
@@ -1937,10 +1979,11 @@
             "label": "Inverter"
           },
           "label": "Esquema de cores",
-          "info": "Visível quando a caixa de texto é exibida"
+          "info": "Visível quando o recetor é exibido"
         },
         "show_text_below": {
-          "label": "Mostrar texto por baixo da imagem em dispositivos móveis"
+          "label": "Mostrar conteúdo por baixo da imagem em dispositivos móveis",
+          "info": "Para obter os melhores resultados, utilize uma imagem com uma proporção de 16:9. [Saber mais](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "Altura da faixa",
@@ -1957,6 +2000,63 @@
             "label": "Grande"
           },
           "info": "Para obter os melhores resultados, utilize uma imagem com uma proporção de 16:9. [Saber mais](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Canto superior esquerdo"
+          },
+          "options__2": {
+            "label": "Superior centro"
+          },
+          "options__3": {
+            "label": "Canto superior direito"
+          },
+          "options__4": {
+            "label": "Intermédio à esquerda"
+          },
+          "options__5": {
+            "label": "Intermédio ao centro"
+          },
+          "options__6": {
+            "label": "Intermédio à direita"
+          },
+          "options__7": {
+            "label": "Canto inferior esquerdo"
+          },
+          "options__8": {
+            "label": "Inferior centro"
+          },
+          "options__9": {
+            "label": "Canto inferior direito"
+          },
+          "label": "Posição do conteúdo em computadores"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Esquerda"
+          },
+          "options__2": {
+            "label": "Ao centro"
+          },
+          "options__3": {
+            "label": "Direita"
+          },
+          "label": "Alinhamento do conteúdo em desktop"
+        },
+        "header": {
+          "content": "Esquema para dispositivo móvel"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Esquerda"
+          },
+          "options__2": {
+            "label": "Ao centro"
+          },
+          "options__3": {
+            "label": "Direita"
+          },
+          "label": "Alinhamento do conteúdo em dispositivos móveis"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "Descrição"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Corpo"
+              },
+              "options__2": {
+                "label": "Legenda"
+              },
+              "label": "Estilo de texto"
             }
           }
         },
@@ -1982,6 +2091,272 @@
       },
       "presets": {
         "name": "Faixa de registo de e-mail"
+      }
+    },
+    "slideshow": {
+      "name": "Apresentação de diapositivos",
+      "settings": {
+        "layout": {
+          "label": "Esquema",
+          "options__1": {
+            "label": "Largura total"
+          },
+          "options__2": {
+            "label": "Grelha"
+          }
+        },
+        "slide_height": {
+          "label": "Altura do diapositivo",
+          "options__1": {
+            "label": "Adaptar à primeira imagem"
+          },
+          "options__2": {
+            "label": "Pequeno"
+          },
+          "options__3": {
+            "label": "Médio"
+          },
+          "options__4": {
+            "label": "Grande"
+          }
+        },
+        "slider_visual": {
+          "label": "Estilo de paginação",
+          "options__1": {
+            "label": "Contador"
+          },
+          "options__2": {
+            "label": "Pontos"
+          },
+          "options__3": {
+            "label": "Números"
+          }
+        },
+        "heading_size": {
+          "label": "Tamanho do tipo de letra do título",
+          "options__1": {
+            "label": "Médio"
+          },
+          "options__2": {
+            "label": "Grande"
+          }
+        },
+        "box_align": {
+          "label": "Posição do conteúdo no desktop",
+          "options__1": {
+            "label": "Canto superior esquerdo"
+          },
+          "options__2": {
+            "label": "Superior centro"
+          },
+          "options__3": {
+            "label": "Canto superior direito"
+          },
+          "options__4": {
+            "label": "Intermédio à esquerda"
+          },
+          "options__5": {
+            "label": "Intermédio ao centro"
+          },
+          "options__6": {
+            "label": "Intermédio à direita"
+          },
+          "options__7": {
+            "label": "Canto inferior esquerdo"
+          },
+          "options__8": {
+            "label": "Inferior centro"
+          },
+          "options__9": {
+            "label": "Canto inferior direito"
+          }
+        },
+        "show_text_box": {
+          "label": "Mostrar recetores no desktop"
+        },
+        "text_alignment": {
+          "label": "Alinhamento do conteúdo no desktop",
+          "option_1": {
+            "label": "Esquerda"
+          },
+          "option_2": {
+            "label": "Ao centro"
+          },
+          "option_3": {
+            "label": "Direita"
+          }
+        },
+        "image_overlay_opacity": {
+          "label": "Opacidade da sobreposição da imagem"
+        },
+        "auto_rotate": {
+          "label": "Rotação automática de diapositivos"
+        },
+        "change_slides_speed": {
+          "label": "Mudar diapositivos a cada"
+        },
+        "color_scheme": {
+          "label": "Esquema de cores da caixa",
+          "info": "Visível quando o recetor é exibido.",
+          "options__1": {
+            "label": "Destaque 1"
+          },
+          "options__2": {
+            "label": "Destaque 2"
+          },
+          "options__3": {
+            "label": "Fundo 1"
+          },
+          "options__4": {
+            "label": "Fundo 2"
+          },
+          "options__5": {
+            "label": "Inverter"
+          }
+        },
+        "mobile": {
+          "content": "Esquema móvel"
+        },
+        "text_alignment_mobile": {
+          "label": "Alinhamento do conteúdo em dispositivos móveis",
+          "options__1": {
+            "label": "Esquerda"
+          },
+          "options__2": {
+            "label": "Ao centro"
+          },
+          "options__3": {
+            "label": "Direita"
+          }
+        },
+        "show_text_below": {
+          "label": "Mostrar conteúdo abaixo das imagens em dispositivos móveis"
+        },
+        "accessibility": {
+          "content": "Acessibilidade",
+          "label": "Descrição da apresentação de diapositivos",
+          "info": "Descreve a apresentação de diapositivos para que seja acessível a clientes que usam leitores de ecrã."
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "Diapositivo",
+          "settings": {
+            "image": {
+              "label": "Imagem"
+            },
+            "heading": {
+              "label": "Cabeçalho"
+            },
+            "subheading": {
+              "label": "Subtítulo"
+            },
+            "button_label": {
+              "label": "Etiqueta do botão",
+              "info": "Deixe a etiqueta em branco para ocultar o botão."
+            },
+            "link": {
+              "label": "Ligação do botão"
+            },
+            "secondary_style": {
+              "label": "Utilizar estilo de botão de contorno"
+            },
+            "heading_size": {
+              "label": "Tamanho do título",
+              "options__1": {
+                "label": "Pequeno"
+              },
+              "options__2": {
+                "label": "Médio"
+              },
+              "options__3": {
+                "label": "Grande"
+              }
+            },
+            "box_align": {
+              "label": "Posição do conteúdo em desktop",
+              "options__1": {
+                "label": "Canto superior esquerdo"
+              },
+              "options__2": {
+                "label": "Superior centro"
+              },
+              "options__3": {
+                "label": "Canto superior direito"
+              },
+              "options__4": {
+                "label": "Intermédio à esquerda"
+              },
+              "options__5": {
+                "label": "Intermédio ao centro"
+              },
+              "options__6": {
+                "label": "Intermédio à direita"
+              },
+              "options__7": {
+                "label": "Canto inferior esquerdo"
+              },
+              "options__8": {
+                "label": "Inferior centro"
+              },
+              "options__9": {
+                "label": "Canto inferior direito"
+              }
+            },
+            "show_text_box": {
+              "label": "Mostrar recetores no desktop"
+            },
+            "text_alignment": {
+              "label": "Alinhamento do conteúdo em desktop",
+              "option_1": {
+                "label": "Esquerda"
+              },
+              "option_2": {
+                "label": "Ao centro"
+              },
+              "option_3": {
+                "label": "Direita"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "Opacidade da sobreposição da imagem"
+            },
+            "color_scheme": {
+              "info": "Visível quando o recetor é exibido.",
+              "options__1": {
+                "label": "Destaque 1"
+              },
+              "options__2": {
+                "label": "Destaque 2"
+              },
+              "options__3": {
+                "label": "Fundo 1"
+              },
+              "options__4": {
+                "label": "Fundo 2"
+              },
+              "options__5": {
+                "label": "Inverter"
+              },
+              "label": "Esquema de cores"
+            },
+            "text_alignment_mobile": {
+              "label": "Alinhamento do conteúdo em dispositivos móveis",
+              "options__1": {
+                "label": "Esquerda"
+              },
+              "options__2": {
+                "label": "Ao centro"
+              },
+              "options__3": {
+                "label": "Direita"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "Apresentação de diapositivos"
       }
     }
   }
