--- a/locales/sv.schema.json
+++ b/locales/sv.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "Andra bild"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Högst upp"
-          },
-          "options__2": {
-            "label": "Centrera"
-          },
-          "options__3": {
-            "label": "Längst ner"
-          },
-          "label": "Text-position dator"
-        },
         "color_scheme": {
           "options__1": {
             "label": "Accent 1"
@@ -729,7 +717,7 @@
             "label": "Omvänd"
           },
           "label": "Färgschema",
-          "info": "Används för textruta."
+          "info": "Synlig när ruta visas."
         },
         "stack_images_on_mobile": {
           "label": "Stapla bilder på mobil"
@@ -739,7 +727,7 @@
           "info": "Skriver över inställning för bildbanner-höjden när den markeras."
         },
         "show_text_box": {
-          "label": "Visa textruta på dator"
+          "label": "Visa ruta på skrivbord"
         },
         "image_overlay_opacity": {
           "label": "Bildens opacitet för överlagring"
@@ -748,7 +736,7 @@
           "content": "Mobil layout"
         },
         "show_text_below": {
-          "label": "Visa text under bilder"
+          "label": "Visa ruta på mobil"
         },
         "image_height": {
           "label": "Banner-höjd",
@@ -762,6 +750,60 @@
             "label": "Stor"
           },
           "info": "Använd en bild med bildformat 3:2, för bästa resultat. [Mer information](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Längst upp till vänster"
+          },
+          "options__2": {
+            "label": "Längst upp i mitten"
+          },
+          "options__3": {
+            "label": "Längst upp till höger"
+          },
+          "options__4": {
+            "label": "Mitten till vänster"
+          },
+          "options__5": {
+            "label": "Mitten centrerat"
+          },
+          "options__6": {
+            "label": "Mitten till höger"
+          },
+          "options__7": {
+            "label": "Längst ner till vänster"
+          },
+          "options__8": {
+            "label": "Längst ner i mitten"
+          },
+          "options__9": {
+            "label": "Längst ner till höger"
+          },
+          "label": "Innehållsposition på dator"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Vänster"
+          },
+          "options__2": {
+            "label": "Centrera"
+          },
+          "options__3": {
+            "label": "Höger"
+          },
+          "label": "Linjering av innehåll på dator"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Vänster"
+          },
+          "options__2": {
+            "label": "Centrera"
+          },
+          "options__3": {
+            "label": "Höger"
+          },
+          "label": "Linjering av innehåll på mobil"
         }
       },
       "blocks": {
@@ -786,6 +828,18 @@
           "settings": {
             "text": {
               "label": "Beskrivning"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Brödtext"
+              },
+              "options__2": {
+                "label": "Underrubrik"
+              },
+              "options__3": {
+                "label": "Stora bokstäver"
+              },
+              "label": "Textstil"
             }
           },
           "name": "Text"
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "Visa bakgrundsbild"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Högst upp"
-          },
-          "options__2": {
-            "label": "Centrera"
-          },
-          "options__3": {
-            "label": "Längst ner"
-          },
-          "label": "Text-position dator"
-        },
         "show_text_box": {
-          "label": "Visa textruta på dator"
+          "label": "Visa ruta på skrivbord"
         },
         "image_overlay_opacity": {
           "label": "Bildens opacitet för överlagring"
@@ -1937,10 +1979,11 @@
             "label": "Omvänd"
           },
           "label": "Färgschema",
-          "info": "Synlig när textruta visas"
+          "info": "Synlig när ruta visas"
         },
         "show_text_below": {
-          "label": "Visa text under bild på mobil"
+          "label": "Visa innehåll under bild på mobil",
+          "info": "Använd en bild med bildformat 16:9, för bästa resultat. [Mer information](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "Banner-höjd",
@@ -1957,6 +2000,63 @@
             "label": "Stor"
           },
           "info": "Använd en bild med bildformat 16:9, för bästa resultat. [Mer information](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__4": {
+            "label": "Mitten till vänster"
+          },
+          "options__5": {
+            "label": "Mitten centrerat"
+          },
+          "options__6": {
+            "label": "Mitten till höger"
+          },
+          "options__7": {
+            "label": "Längst ner till vänster"
+          },
+          "options__8": {
+            "label": "Längst ner i mitten"
+          },
+          "options__9": {
+            "label": "Längst ner till höger"
+          },
+          "options__1": {
+            "label": "Längst upp till vänster"
+          },
+          "options__2": {
+            "label": "Längst upp i mitten"
+          },
+          "options__3": {
+            "label": "Längst upp till höger"
+          },
+          "label": "Innehållsposition på dator"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Vänster"
+          },
+          "options__2": {
+            "label": "Centrera"
+          },
+          "options__3": {
+            "label": "Höger"
+          },
+          "label": "Justering av innehåll på skrivbord"
+        },
+        "header": {
+          "content": "Mobil layout"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Vänster"
+          },
+          "options__2": {
+            "label": "Centrera"
+          },
+          "options__3": {
+            "label": "Höger"
+          },
+          "label": "Linjering av innehåll på mobil"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "Beskrivning"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Brödtext"
+              },
+              "options__2": {
+                "label": "Underrubrik"
+              },
+              "label": "Textstil"
             }
           }
         },
@@ -1982,6 +2091,273 @@
       },
       "presets": {
         "name": "Banner för e-postregistrering"
+      }
+    },
+    "slideshow": {
+      "name": "Bildspel",
+      "settings": {
+        "layout": {
+          "label": "Layout",
+          "options__1": {
+            "label": "Full bredd"
+          },
+          "options__2": {
+            "label": "Rutnät"
+          }
+        },
+        "slide_height": {
+          "label": "Bildhöjd",
+          "options__1": {
+            "label": "Anpassa efter första bilden"
+          },
+          "options__2": {
+            "label": "Liten"
+          },
+          "options__3": {
+            "label": "Medel"
+          },
+          "options__4": {
+            "label": "Stor"
+          }
+        },
+        "slider_visual": {
+          "label": "Pagineringsstil",
+          "options__1": {
+            "label": "Räknare"
+          },
+          "options__2": {
+            "label": "Prickar"
+          },
+          "options__3": {
+            "label": "Siffror"
+          }
+        },
+        "heading_size": {
+          "label": "Rubrikens typsnittsstorlek",
+          "options__1": {
+            "label": "Medel"
+          },
+          "options__2": {
+            "label": "Stor"
+          }
+        },
+        "box_align": {
+          "label": "Innehållsposition på dator",
+          "options__1": {
+            "label": "Överst till vänster"
+          },
+          "options__2": {
+            "label": "Längst upp i mitten"
+          },
+          "options__3": {
+            "label": "Överst till höger"
+          },
+          "options__4": {
+            "label": "Mitten till vänster"
+          },
+          "options__5": {
+            "label": "Mitten centrerat"
+          },
+          "options__6": {
+            "label": "Mitten till höger"
+          },
+          "options__7": {
+            "label": "Nere till vänster"
+          },
+          "options__8": {
+            "label": "Längst ner i mitten"
+          },
+          "options__9": {
+            "label": "Nere till höger"
+          }
+        },
+        "show_text_box": {
+          "label": "Visa ruta på skrivbord"
+        },
+        "text_alignment": {
+          "label": "Justering av innehåll på skrivbord",
+          "option_1": {
+            "label": "Vänster"
+          },
+          "option_2": {
+            "label": "Centrera"
+          },
+          "option_3": {
+            "label": "Höger"
+          }
+        },
+        "image_overlay_opacity": {
+          "label": "Bildens opacitet för överlagring"
+        },
+        "auto_rotate": {
+          "label": "Auto-rotera bilder"
+        },
+        "change_slides_speed": {
+          "label": "Byt bilder varje"
+        },
+        "color_scheme": {
+          "label": "Färgschema för låda",
+          "info": "Synlig när ruta visas.",
+          "options__1": {
+            "label": "Accent 1"
+          },
+          "options__2": {
+            "label": "Accent 2"
+          },
+          "options__3": {
+            "label": "Bakgrund 1"
+          },
+          "options__4": {
+            "label": "Bakgrund 2"
+          },
+          "options__5": {
+            "label": "Omvänd"
+          }
+        },
+        "mobile": {
+          "content": "Mobil layout"
+        },
+        "text_alignment_mobile": {
+          "label": "Linjering av innehåll på mobil",
+          "options__1": {
+            "label": "Vänster"
+          },
+          "options__2": {
+            "label": "Centrera"
+          },
+          "options__3": {
+            "label": "Höger"
+          }
+        },
+        "show_text_below": {
+          "label": "Visa innehåll under bilder på mobil"
+        },
+        "accessibility": {
+          "content": "Tillgänglighet",
+          "label": "Beskrivning bildspel",
+          "info": "Beskriv bildspelet för kunder som använder skärmläsare."
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "Bild",
+          "settings": {
+            "image": {
+              "label": "Bild"
+            },
+            "heading": {
+              "label": "Rubrik"
+            },
+            "subheading": {
+              "label": "Underrubrik"
+            },
+            "button_label": {
+              "label": "Knappetikett",
+              "info": "Lämna etiketten tom eller dölj knappen."
+            },
+            "link": {
+              "label": "Knapplänk",
+              "info": "Lämna etiketten tom eller dölj knappen."
+            },
+            "secondary_style": {
+              "label": "Använd stil för knappkontur"
+            },
+            "heading_size": {
+              "label": "Rubrikstorlek",
+              "options__1": {
+                "label": "Liten"
+              },
+              "options__2": {
+                "label": "Medel"
+              },
+              "options__3": {
+                "label": "Stor"
+              }
+            },
+            "box_align": {
+              "label": "Innehållsposition på dator",
+              "options__1": {
+                "label": "Överst till vänster"
+              },
+              "options__2": {
+                "label": "Längst upp i mitten"
+              },
+              "options__3": {
+                "label": "Överst till höger"
+              },
+              "options__4": {
+                "label": "Mitten till vänster"
+              },
+              "options__5": {
+                "label": "Mitten centrerat"
+              },
+              "options__6": {
+                "label": "Mitten till höger"
+              },
+              "options__7": {
+                "label": "Nere till vänster"
+              },
+              "options__8": {
+                "label": "Längst ner i mitten"
+              },
+              "options__9": {
+                "label": "Nere till höger"
+              }
+            },
+            "show_text_box": {
+              "label": "Visa ruta på skrivbord"
+            },
+            "text_alignment": {
+              "label": "Justering av innehåll på skrivbord",
+              "option_1": {
+                "label": "Vänster"
+              },
+              "option_2": {
+                "label": "Centrera"
+              },
+              "option_3": {
+                "label": "Höger"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "Bildens opacitet för överlagring"
+            },
+            "color_scheme": {
+              "label": "Färgschema",
+              "info": "Synlig när ruta visas.",
+              "options__1": {
+                "label": "Accent 1"
+              },
+              "options__2": {
+                "label": "Accent 2"
+              },
+              "options__3": {
+                "label": "Bakgrund 1"
+              },
+              "options__4": {
+                "label": "Bakgrund 2"
+              },
+              "options__5": {
+                "label": "Omvänd"
+              }
+            },
+            "text_alignment_mobile": {
+              "label": "Linjering av innehåll på mobil",
+              "options__1": {
+                "label": "Vänster"
+              },
+              "options__2": {
+                "label": "Centrera"
+              },
+              "options__3": {
+                "label": "Höger"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "Bildspel"
       }
     }
   }
