--- a/locales/th.schema.json
+++ b/locales/th.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "รูปภาพที่สอง"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "บน"
-          },
-          "options__2": {
-            "label": "กึ่งกลาง"
-          },
-          "options__3": {
-            "label": "ล่าง"
-          },
-          "label": "ตำแหน่งข้อความบนเดสก์ท็อป"
-        },
         "color_scheme": {
           "options__1": {
             "label": "การเน้น 1"
@@ -729,7 +717,7 @@
             "label": "ตรงกันข้าม"
           },
           "label": "รูปแบบสี",
-          "info": "ใช้สำหรับกล่องข้อความ"
+          "info": "ปรากฏให้เห็นเมื่อแสดงคอนเทนเนอร์"
         },
         "stack_images_on_mobile": {
           "label": "การรวมภาพบนมือถือ"
@@ -739,7 +727,7 @@
           "info": "เขียนทับการตั้งค่าความสูงของแบนเนอร์รูปภาพเมื่อทำเครื่องหมาย"
         },
         "show_text_box": {
-          "label": "แสดงกล่องข้อความบนเดสก์ท็อป"
+          "label": "แสดงคอนเทนเนอร์บนเดสก์ท็อป"
         },
         "image_overlay_opacity": {
           "label": "ความทึบของการวางซ้อนรูปภาพ"
@@ -748,7 +736,7 @@
           "content": "เลย์เอาต์ของมือถือ"
         },
         "show_text_below": {
-          "label": "แสดงข้อความที่ด้านล่างของรูปภาพ"
+          "label": "แสดงคอนเทนเนอร์บนมือถือ"
         },
         "image_height": {
           "label": "ความสูงของแบนเนอร์",
@@ -762,6 +750,60 @@
             "label": "ใหญ่"
           },
           "info": "ใช้รูปภาพที่มีอัตราส่วนภาพ 3:2 เพื่อผลลัพธ์ที่ดีที่สุด [ดูข้อมูลเพิ่มเติม](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "ซ้ายบน"
+          },
+          "options__2": {
+            "label": "กึ่งกลางด้านบน"
+          },
+          "options__3": {
+            "label": "ขวาบน"
+          },
+          "options__4": {
+            "label": "ตรงกลางด้านซ้าย"
+          },
+          "options__5": {
+            "label": "กึ่งกลางตรงกลาง"
+          },
+          "options__6": {
+            "label": "ตรงกลางด้านขวา"
+          },
+          "options__7": {
+            "label": "ซ้ายล่าง"
+          },
+          "options__8": {
+            "label": "กึ่งกลางด้านล่าง"
+          },
+          "options__9": {
+            "label": "ขวาล่าง"
+          },
+          "label": "ตำแหน่งเนื้อหาบนเดสก์ท็อป"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "ซ้าย"
+          },
+          "options__2": {
+            "label": "กึ่งกลาง"
+          },
+          "options__3": {
+            "label": "ขวา"
+          },
+          "label": "การจัดวางเนื้อหาบนเดสก์ท็อป"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "ซ้าย"
+          },
+          "options__2": {
+            "label": "กึ่งกลาง"
+          },
+          "options__3": {
+            "label": "ขวา"
+          },
+          "label": "การจัดวางเนื้อหาบนมือถือ"
         }
       },
       "blocks": {
@@ -786,6 +828,18 @@
           "settings": {
             "text": {
               "label": "คำอธิบาย"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "เนื้อหา"
+              },
+              "options__2": {
+                "label": "คำบรรยาย"
+              },
+              "options__3": {
+                "label": "ตัวพิมพ์ใหญ่"
+              },
+              "label": "รูปแบบข้อความ"
             }
           },
           "name": "ข้อความ"
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "แสดงรูปภาพพื้นหลัง"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "บน"
-          },
-          "options__2": {
-            "label": "กึ่งกลาง"
-          },
-          "options__3": {
-            "label": "ล่าง"
-          },
-          "label": "ตำแหน่งข้อความบนเดสก์ท็อป"
-        },
         "show_text_box": {
-          "label": "แสดงกล่องข้อความบนเดสก์ท็อป"
+          "label": "แสดงคอนเทนเนอร์บนเดสก์ท็อป"
         },
         "image_overlay_opacity": {
           "label": "ความทึบของการวางซ้อนรูปภาพ"
@@ -1937,10 +1979,11 @@
             "label": "ตรงกันข้าม"
           },
           "label": "รูปแบบสี",
-          "info": "ปรากฏให้เห็นเมื่อแสดงกล่องข้อความ"
+          "info": "ปรากฏให้เห็นเมื่อแสดงคอนเทนเนอร์"
         },
         "show_text_below": {
-          "label": "แสดงข้อความด้านล่างรูปภาพในมือถือ"
+          "label": "แสดงเนื้อหาที่ด้านล่างของรูปภาพบนมือถือ",
+          "info": "ใช้รูปภาพที่มีอัตราส่วนภาพ 16:9 เพื่อผลลัพธ์ที่ดีที่สุด [ดูข้อมูลเพิ่มเติม](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "ความสูงของแบนเนอร์",
@@ -1957,6 +2000,63 @@
             "label": "ใหญ่"
           },
           "info": "ใช้รูปภาพที่มีอัตราส่วนภาพ 16:9 เพื่อผลลัพธ์ที่ดีที่สุด [ดูข้อมูลเพิ่มเติม](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__4": {
+            "label": "ตรงกลางด้านซ้าย"
+          },
+          "options__5": {
+            "label": "กึ่งกลางตรงกลาง"
+          },
+          "options__6": {
+            "label": "ตรงกลางด้านขวา"
+          },
+          "options__7": {
+            "label": "ซ้ายล่าง"
+          },
+          "options__8": {
+            "label": "กึ่งกลางด้านล่าง"
+          },
+          "options__9": {
+            "label": "ขวาล่าง"
+          },
+          "options__1": {
+            "label": "ซ้ายบน"
+          },
+          "options__2": {
+            "label": "กึ่งกลางด้านบน"
+          },
+          "options__3": {
+            "label": "ขวาบน"
+          },
+          "label": "ตำแหน่งเนื้อหาบนเดสก์ท็อป"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "ซ้าย"
+          },
+          "options__2": {
+            "label": "กึ่งกลาง"
+          },
+          "options__3": {
+            "label": "ขวา"
+          },
+          "label": "การจัดวางเนื้อหาบนเดสก์ท็อป"
+        },
+        "header": {
+          "content": "เลย์เอาต์สำหรับมือถือ"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "ซ้าย"
+          },
+          "options__2": {
+            "label": "กึ่งกลาง"
+          },
+          "options__3": {
+            "label": "ขวา"
+          },
+          "label": "การจัดวางเนื้อหาบนมือถือ"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "คำอธิบาย"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "เนื้อหา"
+              },
+              "options__2": {
+                "label": "คำบรรยาย"
+              },
+              "label": "รูปแบบข้อความ"
             }
           }
         },
@@ -1982,6 +2091,273 @@
       },
       "presets": {
         "name": "แบนเนอร์การลงทะเบียนอีเมล"
+      }
+    },
+    "slideshow": {
+      "name": "สไลด์โชว์",
+      "settings": {
+        "layout": {
+          "label": "เลย์เอาต์",
+          "options__1": {
+            "label": "เต็มความกว้าง"
+          },
+          "options__2": {
+            "label": "กริด"
+          }
+        },
+        "slide_height": {
+          "label": "ความสูงของสไลด์",
+          "options__1": {
+            "label": "ปรับให้เข้ากับรูปภาพแรก"
+          },
+          "options__2": {
+            "label": "เล็ก"
+          },
+          "options__3": {
+            "label": "ปานกลาง"
+          },
+          "options__4": {
+            "label": "ใหญ่"
+          }
+        },
+        "slider_visual": {
+          "label": "รูปแบบการแบ่งหน้า",
+          "options__1": {
+            "label": "ตัวนับ"
+          },
+          "options__2": {
+            "label": "จุด"
+          },
+          "options__3": {
+            "label": "ตัวเลข"
+          }
+        },
+        "heading_size": {
+          "label": "ขนาดแบบอักษรของหัวเรื่อง",
+          "options__1": {
+            "label": "ปานกลาง"
+          },
+          "options__2": {
+            "label": "ใหญ่"
+          }
+        },
+        "box_align": {
+          "label": "ตำแหน่งเนื้อหาบนเดสก์ท็อป",
+          "options__1": {
+            "label": "ซ้ายบน"
+          },
+          "options__2": {
+            "label": "กึ่งกลางด้านบน"
+          },
+          "options__3": {
+            "label": "ขวาบน"
+          },
+          "options__4": {
+            "label": "ตรงกลางด้านซ้าย"
+          },
+          "options__5": {
+            "label": "กึ่งกลาง"
+          },
+          "options__6": {
+            "label": "ตรงกลางด้านขวา"
+          },
+          "options__7": {
+            "label": "ซ้ายล่าง"
+          },
+          "options__8": {
+            "label": "กึ่งกลางด้านล่าง"
+          },
+          "options__9": {
+            "label": "ขวาล่าง"
+          }
+        },
+        "show_text_box": {
+          "label": "แสดงคอนเทนเนอร์บนเดสก์ท็อป"
+        },
+        "text_alignment": {
+          "label": "การจัดวางเนื้อหาบนเดสก์ท็อป",
+          "option_1": {
+            "label": "ซ้าย"
+          },
+          "option_2": {
+            "label": "กึ่งกลาง"
+          },
+          "option_3": {
+            "label": "ขวา"
+          }
+        },
+        "image_overlay_opacity": {
+          "label": "ความทึบของการวางซ้อนรูปภาพ"
+        },
+        "auto_rotate": {
+          "label": "หมุนสไลด์อัตโนมัติ"
+        },
+        "change_slides_speed": {
+          "label": "เปลี่ยนสไลด์ทุก"
+        },
+        "color_scheme": {
+          "label": "รูปแบบสีกล่อง",
+          "info": "ปรากฏให้เห็นเมื่อแสดงคอนเทนเนอร์",
+          "options__1": {
+            "label": "การเน้น 1"
+          },
+          "options__2": {
+            "label": "การเน้น 2"
+          },
+          "options__3": {
+            "label": "พื้นหลัง 1"
+          },
+          "options__4": {
+            "label": "พื้นหลัง 2"
+          },
+          "options__5": {
+            "label": "ตรงกันข้าม"
+          }
+        },
+        "mobile": {
+          "content": "เลย์เอาต์สำหรับมือถือ"
+        },
+        "text_alignment_mobile": {
+          "label": "การจัดวางเนื้อหาบนมือถือ",
+          "options__1": {
+            "label": "ซ้าย"
+          },
+          "options__2": {
+            "label": "กึ่งกลาง"
+          },
+          "options__3": {
+            "label": "ขวา"
+          }
+        },
+        "show_text_below": {
+          "label": "แสดงเนื้อหาที่ด้านล่างของรูปภาพบนมือถือ"
+        },
+        "accessibility": {
+          "content": "การเข้าถึง",
+          "label": "คำอธิบายสไลด์โชว์",
+          "info": "อธิบายสไลด์โชว์ให้กับลูกค้าที่ใช้เครื่องอ่านหน้าจอ"
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "สไลด์",
+          "settings": {
+            "image": {
+              "label": "รูปภาพ"
+            },
+            "heading": {
+              "label": "หัวเรื่อง"
+            },
+            "subheading": {
+              "label": "หัวเรื่องย่อย"
+            },
+            "button_label": {
+              "label": "ป้ายกำกับปุ่ม",
+              "info": "เว้นป้ายกำกับให้ว่างไว้เพื่อซ่อนปุ่ม"
+            },
+            "link": {
+              "label": "ลิงก์ปุ่ม",
+              "info": "เว้นป้ายกำกับให้ว่างไว้เพื่อซ่อนปุ่ม"
+            },
+            "secondary_style": {
+              "label": "ใช้รูปแบบปุ่มแบบเค้าโครง"
+            },
+            "heading_size": {
+              "label": "ขนาดของหัวเรื่อง",
+              "options__1": {
+                "label": "เล็ก"
+              },
+              "options__2": {
+                "label": "ปานกลาง"
+              },
+              "options__3": {
+                "label": "ใหญ่"
+              }
+            },
+            "box_align": {
+              "label": "ตำแหน่งเนื้อหาบนเดสก์ท็อป",
+              "options__1": {
+                "label": "ซ้ายบน"
+              },
+              "options__2": {
+                "label": "กึ่งกลางด้านบน"
+              },
+              "options__3": {
+                "label": "ขวาบน"
+              },
+              "options__4": {
+                "label": "ตรงกลางด้านซ้าย"
+              },
+              "options__5": {
+                "label": "กึ่งกลาง"
+              },
+              "options__6": {
+                "label": "ตรงกลางด้านขวา"
+              },
+              "options__7": {
+                "label": "ซ้ายล่าง"
+              },
+              "options__8": {
+                "label": "กึ่งกลางด้านล่าง"
+              },
+              "options__9": {
+                "label": "ขวาล่าง"
+              }
+            },
+            "show_text_box": {
+              "label": "แสดงกรอบเนื้อหาบนเดสก์ท็อป"
+            },
+            "text_alignment": {
+              "label": "การจัดวางเนื้อหาบนเดสก์ท็อป",
+              "option_1": {
+                "label": "ซ้าย"
+              },
+              "option_2": {
+                "label": "กึ่งกลาง"
+              },
+              "option_3": {
+                "label": "ขวา"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "ความทึบของการวางซ้อนรูปภาพ"
+            },
+            "color_scheme": {
+              "label": "รูปแบบสี",
+              "info": "ปรากฏให้เห็นเมื่อแสดงกรอบเนื้อหา",
+              "options__1": {
+                "label": "การเน้นตัวอักษร 1"
+              },
+              "options__2": {
+                "label": "การเน้นตัวอักษร 2"
+              },
+              "options__3": {
+                "label": "พื้นหลัง 1"
+              },
+              "options__4": {
+                "label": "พื้นหลัง 2"
+              },
+              "options__5": {
+                "label": "ตรงกันข้าม"
+              }
+            },
+            "text_alignment_mobile": {
+              "label": "การจัดวางเนื้อหาบนมือถือ",
+              "options__1": {
+                "label": "ซ้าย"
+              },
+              "options__2": {
+                "label": "กึ่งกลาง"
+              },
+              "options__3": {
+                "label": "ขวา"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "สไลด์โชว์"
       }
     }
   }
