--- a/locales/tr.schema.json
+++ b/locales/tr.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "İkinci görsel"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Üst"
-          },
-          "options__2": {
-            "label": "Orta"
-          },
-          "options__3": {
-            "label": "Alt"
-          },
-          "label": "Masaüstü metin konumu"
-        },
         "color_scheme": {
           "options__1": {
             "label": "1. Vurgu"
@@ -729,7 +717,7 @@
             "label": "Ters"
           },
           "label": "Renk şeması",
-          "info": "Metin kutusu için kullanılır."
+          "info": "Kapsayıcı gösterildiğinde görünür."
         },
         "stack_images_on_mobile": {
           "label": "Mobilde görselleri üst üste ekle"
@@ -739,7 +727,7 @@
           "info": "İşaretlendiğinde görüntü banner'ı yükseklik ayarının üzerine yazar."
         },
         "show_text_box": {
-          "label": "Masaüstünde metin kutusunu göster"
+          "label": "Masaüstünde kapsayıcıyı göster"
         },
         "image_overlay_opacity": {
           "label": "Görsel yer paylaşımı opaklığı"
@@ -748,7 +736,7 @@
           "content": "Mobil Düzen"
         },
         "show_text_below": {
-          "label": "Metni görsellerin altında göster"
+          "label": "Mobil cihaz üzerinde kapsayıcıyı göster"
         },
         "image_height": {
           "label": "Banner yüksekliği",
@@ -762,6 +750,60 @@
             "label": "Büyük"
           },
           "info": "En iyi sonuçlar için 3:2 en-boy oranına sahip bir görsel kullanın. [Daha fazla bilgi edinin](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Üst Sol"
+          },
+          "options__2": {
+            "label": "Üst Orta"
+          },
+          "options__3": {
+            "label": "Üst Sağ"
+          },
+          "options__4": {
+            "label": "Orta Sol"
+          },
+          "options__5": {
+            "label": "Orta Kısmın Ortası"
+          },
+          "options__6": {
+            "label": "Orta Sağ"
+          },
+          "options__7": {
+            "label": "Alt Sol"
+          },
+          "options__8": {
+            "label": "Alt Orta"
+          },
+          "options__9": {
+            "label": "Alt Sağ"
+          },
+          "label": "Masaüstü içerik konumu"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Sol"
+          },
+          "options__2": {
+            "label": "Orta"
+          },
+          "options__3": {
+            "label": "Sağ"
+          },
+          "label": "Masaüstü içerik hizalaması"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Sol"
+          },
+          "options__2": {
+            "label": "Orta"
+          },
+          "options__3": {
+            "label": "Sağ"
+          },
+          "label": "Mobil içerik hizalaması"
         }
       },
       "blocks": {
@@ -787,6 +829,18 @@
           "settings": {
             "text": {
               "label": "Açıklama"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Gövde"
+              },
+              "options__2": {
+                "label": "Alt yazı"
+              },
+              "options__3": {
+                "label": "Büyük harf"
+              },
+              "label": "Metin stili"
             }
           }
         },
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "Arka plan resmini göster"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Üst"
-          },
-          "options__2": {
-            "label": "Orta"
-          },
-          "options__3": {
-            "label": "Alt"
-          },
-          "label": "Masaüstü metin konumu"
-        },
         "show_text_box": {
-          "label": "Masaüstünde metin kutusunu göster"
+          "label": "Masaüstünde kapsayıcıyı göster"
         },
         "image_overlay_opacity": {
           "label": "Görsel yer paylaşımı opaklığı"
@@ -1937,10 +1979,11 @@
             "label": "Ters"
           },
           "label": "Renk şeması",
-          "info": "Metin kutusu gösterildiğinde görünür"
+          "info": "Kapsayıcı gösterildiğinde görünür"
         },
         "show_text_below": {
-          "label": "Mobil cihaz üzerinde görsellerin altındaki metni göster"
+          "label": "Mobil cihaz üzerinde görselin altındaki içeriği göster",
+          "info": "En iyi sonuçlar için 16:9 en-boy oranına sahip bir görsel kullanın. [Daha fazla bilgi edinin](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "Banner yüksekliği",
@@ -1957,6 +2000,63 @@
             "label": "Büyük"
           },
           "info": "En iyi sonuçlar için 16:9 en-boy oranına sahip bir görsel kullanın. [Daha fazla bilgi edinin](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Üst Sol"
+          },
+          "options__2": {
+            "label": "Üst Orta"
+          },
+          "options__3": {
+            "label": "Üst Sağ"
+          },
+          "options__4": {
+            "label": "Orta Sol"
+          },
+          "options__5": {
+            "label": "Orta Kısmın Ortası"
+          },
+          "options__6": {
+            "label": "Orta Sağ"
+          },
+          "options__7": {
+            "label": "Alt Sol"
+          },
+          "options__8": {
+            "label": "Alt Orta"
+          },
+          "options__9": {
+            "label": "Alt Sağ"
+          },
+          "label": "Masaüstü içerik konumu"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Sol"
+          },
+          "options__2": {
+            "label": "Orta"
+          },
+          "options__3": {
+            "label": "Sağ"
+          },
+          "label": "Masaüstü içerik hizalaması"
+        },
+        "header": {
+          "content": "Mobil Düzen"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Sol"
+          },
+          "options__2": {
+            "label": "Orta"
+          },
+          "options__3": {
+            "label": "Sağ"
+          },
+          "label": "Mobil içerik hizalaması"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "Açıklama"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Gövde"
+              },
+              "options__2": {
+                "label": "Alt yazı"
+              },
+              "label": "Metin stili"
             }
           }
         },
@@ -1982,6 +2091,184 @@
       },
       "presets": {
         "name": "E-posta kaydı banner'ı"
+      }
+    },
+    "slideshow": {
+      "name": "Slayt gösterisi",
+      "settings": {
+        "layout": {
+          "label": "Düzen",
+          "options__1": {
+            "label": "Tam genişlik"
+          },
+          "options__2": {
+            "label": "Izgara"
+          }
+        },
+        "slide_height": {
+          "label": "Slayt yüksekliği",
+          "options__1": {
+            "label": "İlk görsele uyarla"
+          },
+          "options__2": {
+            "label": "Küçük"
+          },
+          "options__3": {
+            "label": "Orta"
+          },
+          "options__4": {
+            "label": "Büyük"
+          }
+        },
+        "slider_visual": {
+          "label": "Sayfalara ayırma stili",
+          "options__1": {
+            "label": "Sayaç"
+          },
+          "options__2": {
+            "label": "Noktalar"
+          },
+          "options__3": {
+            "label": "Numaralar"
+          }
+        },
+        "auto_rotate": {
+          "label": "Slaytları otomatik olarak döndür"
+        },
+        "change_slides_speed": {
+          "label": "Slaytları şu zaman aralığında değiştir:"
+        },
+        "show_text_below": {
+          "label": "Mobil cihaz üzerinde görsellerin altındaki içeriği göster"
+        },
+        "mobile": {
+          "content": "Mobil düzen"
+        },
+        "accessibility": {
+          "content": "Erişilebilirlik",
+          "label": "Slayt gösterisi açıklaması",
+          "info": "Ekran koruyucu kullanan müşteriler için slayt gösterisini açıklayın."
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "Slayt",
+          "settings": {
+            "image": {
+              "label": "Görsel"
+            },
+            "heading": {
+              "label": "Başlık"
+            },
+            "subheading": {
+              "label": "Alt başlık"
+            },
+            "button_label": {
+              "label": "Düğme etiketi",
+              "info": "Düğmeyi gizlemek için etiketi boş bırakın."
+            },
+            "link": {
+              "label": "Düğme bağlantısı"
+            },
+            "secondary_style": {
+              "label": "Dış çizgi düğme stilini kullan"
+            },
+            "heading_size": {
+              "label": "Başlık boyutu",
+              "options__1": {
+                "label": "Küçük"
+              },
+              "options__2": {
+                "label": "Orta"
+              },
+              "options__3": {
+                "label": "Büyük"
+              }
+            },
+            "box_align": {
+              "label": "Masaüstü içerik konumu",
+              "options__1": {
+                "label": "Üst sol"
+              },
+              "options__2": {
+                "label": "Üst orta"
+              },
+              "options__3": {
+                "label": "Üst sağ"
+              },
+              "options__4": {
+                "label": "Orta sol"
+              },
+              "options__5": {
+                "label": "Orta kısmın ortası"
+              },
+              "options__6": {
+                "label": "Orta sağ"
+              },
+              "options__7": {
+                "label": "Alt sol"
+              },
+              "options__8": {
+                "label": "Alt orta"
+              },
+              "options__9": {
+                "label": "Alt sağ"
+              }
+            },
+            "show_text_box": {
+              "label": "Masaüstünde kapsayıcıyı göster"
+            },
+            "text_alignment": {
+              "label": "Masaüstü içerik hizalaması",
+              "option_1": {
+                "label": "Sol"
+              },
+              "option_2": {
+                "label": "Orta"
+              },
+              "option_3": {
+                "label": "Sağ"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "Görsel yer paylaşımı opaklığı"
+            },
+            "color_scheme": {
+              "info": "Kapsayıcı gösterildiğinde görünür.",
+              "options__1": {
+                "label": "1. Vurgu"
+              },
+              "options__2": {
+                "label": "2. Vurgu"
+              },
+              "options__3": {
+                "label": "1. Arka plan"
+              },
+              "options__4": {
+                "label": "2. Arka plan"
+              },
+              "options__5": {
+                "label": "Ters"
+              },
+              "label": "Renk şeması"
+            },
+            "text_alignment_mobile": {
+              "label": "Mobil içerik hizalaması",
+              "options__1": {
+                "label": "Sol"
+              },
+              "options__2": {
+                "label": "Orta"
+              },
+              "options__3": {
+                "label": "Sağ"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "Slayt gösterisi"
       }
     }
   }
