--- a/locales/vi.schema.json
+++ b/locales/vi.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "Hình ảnh thứ hai"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Trên"
-          },
-          "options__2": {
-            "label": "Giữa"
-          },
-          "options__3": {
-            "label": "Dưới"
-          },
-          "label": "Vị trí văn bản trên màn hình máy tính"
-        },
         "color_scheme": {
           "options__1": {
             "label": "Nhấn 1"
@@ -729,7 +717,7 @@
             "label": "Nghịch đảo"
           },
           "label": "Bảng màu",
-          "info": "Sử dụng cho hộp văn bản."
+          "info": "Có thể nhìn thấy khi vùng chứa hiển thị."
         },
         "stack_images_on_mobile": {
           "label": "Xếp chồng hình ảnh trên điện thoại di động"
@@ -739,7 +727,7 @@
           "info": "Nếu chọn, cài đặt chiều cao biểu ngữ hình ảnh sẽ được ghi đè."
         },
         "show_text_box": {
-          "label": "Hiển thị hộp văn bản trên máy tính để bàn"
+          "label": "Hiện vùng chứa trên máy tính để bàn"
         },
         "image_overlay_opacity": {
           "label": "Độ chắn sáng của lớp phủ hình ảnh"
@@ -748,7 +736,7 @@
           "content": "Bố cục trên thiết bị di động"
         },
         "show_text_below": {
-          "label": "Hiển thị văn bản bên dưới hình ảnh"
+          "label": "Hiện vùng chứa trên thiết bị di động"
         },
         "image_height": {
           "label": "Chiều cao biểu ngữ",
@@ -762,6 +750,60 @@
             "label": "Lớn"
           },
           "info": "Để có kết quả tốt nhất, hãy sử dụng hình ảnh có tỷ lệ khung hình 3:2. [Tìm hiểu thêm](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Trên cùng bên trái"
+          },
+          "options__2": {
+            "label": "Trên cùng ở giữa"
+          },
+          "options__3": {
+            "label": "Trên cùng bên phải"
+          },
+          "options__4": {
+            "label": "Ở giữa bên trái"
+          },
+          "options__5": {
+            "label": "Chính giữa"
+          },
+          "options__6": {
+            "label": "Ở giữa bên phải"
+          },
+          "options__7": {
+            "label": "Dưới cùng bên trái"
+          },
+          "options__8": {
+            "label": "Dưới cùng ở giữa"
+          },
+          "options__9": {
+            "label": "Dưới cùng bên phải"
+          },
+          "label": "Vị trí nội dung trên màn hình máy tính để bàn"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Bên trái"
+          },
+          "options__2": {
+            "label": "Giữa"
+          },
+          "options__3": {
+            "label": "Bên phải"
+          },
+          "label": "Căn chỉnh nội dung trên màn hình máy tính để bàn"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Bên trái"
+          },
+          "options__2": {
+            "label": "Giữa"
+          },
+          "options__3": {
+            "label": "Bên phải"
+          },
+          "label": "Căn chỉnh nội dung trên thiết bị di động"
         }
       },
       "blocks": {
@@ -787,6 +829,18 @@
           "settings": {
             "text": {
               "label": "Mô tả"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Nội dung"
+              },
+              "options__2": {
+                "label": "Tiêu đề"
+              },
+              "options__3": {
+                "label": "Chữ viết hoa"
+              },
+              "label": "Kiểu văn bản"
             }
           }
         },
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "Hiển thị ảnh nền"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "Bên trên"
-          },
-          "options__2": {
-            "label": "Giữa"
-          },
-          "options__3": {
-            "label": "Bên dưới"
-          },
-          "label": "Vị trí văn bản trên màn hình máy tính để bàn"
-        },
         "show_text_box": {
-          "label": "Hiển thị hộp văn bản trên máy tính để bàn"
+          "label": "Hiện vùng chứa trên máy tính để bàn"
         },
         "image_overlay_opacity": {
           "label": "Độ chắn sáng của lớp phủ hình ảnh"
@@ -1937,10 +1979,11 @@
             "label": "Nghịch đảo"
           },
           "label": "Bảng màu",
-          "info": "Hiển thị khi hộp văn bản xuất hiện"
+          "info": "Có thể nhìn thấy khi vùng chứa hiển thị"
         },
         "show_text_below": {
-          "label": "Hiển thị văn bản bên dưới hình ảnh trên thiết bị di động"
+          "label": "Hiển thị nội dung dưới hình ảnh trên thiết bị di động",
+          "info": "Để có kết quả tốt nhất, hãy sử dụng hình ảnh có tỷ lệ khung hình 16:9. [Tìm hiểu thêm](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "Chiều cao biểu ngữ",
@@ -1957,6 +2000,63 @@
             "label": "Lớn"
           },
           "info": "Để có kết quả tốt nhất, hãy sử dụng hình ảnh có tỷ lệ khung hình 16:9. [Tìm hiểu thêm](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Trên cùng bên trái"
+          },
+          "options__2": {
+            "label": "Trên cùng ở giữa"
+          },
+          "options__3": {
+            "label": "Trên cùng bên phải"
+          },
+          "options__4": {
+            "label": "Ở giữa bên trái"
+          },
+          "options__5": {
+            "label": "Chính giữa"
+          },
+          "options__6": {
+            "label": "Ở giữa bên phải"
+          },
+          "options__7": {
+            "label": "Dưới cùng bên trái"
+          },
+          "options__8": {
+            "label": "Dưới cùng ở giữa"
+          },
+          "options__9": {
+            "label": "Dưới cùng bên phải"
+          },
+          "label": "Vị trí nội dung trên màn hình máy tính để bàn"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Bên trái"
+          },
+          "options__2": {
+            "label": "Giữa"
+          },
+          "options__3": {
+            "label": "Bên phải"
+          },
+          "label": "Căn chỉnh nội dung trên máy tính để bàn"
+        },
+        "header": {
+          "content": "Bố cục trên thiết bị di động"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Bên trái"
+          },
+          "options__2": {
+            "label": "Giữa"
+          },
+          "options__3": {
+            "label": "Bên phải"
+          },
+          "label": "Căn chỉnh nội dung trên thiết bị di động"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "Mô tả"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "Nội dung"
+              },
+              "options__2": {
+                "label": "Tiêu đề"
+              },
+              "label": "Kiểu văn bản"
             }
           }
         },
@@ -1982,6 +2091,272 @@
       },
       "presets": {
         "name": "Biểu ngữ đăng ký nhận email"
+      }
+    },
+    "slideshow": {
+      "name": "Bản trình chiếu",
+      "settings": {
+        "layout": {
+          "label": "Bố cục",
+          "options__1": {
+            "label": "Độ rộng đầy đủ"
+          },
+          "options__2": {
+            "label": "Lưới"
+          }
+        },
+        "slide_height": {
+          "label": "Chiều cao trang chiếu",
+          "options__1": {
+            "label": "Điều chỉnh theo hình ảnh đầu tiên"
+          },
+          "options__2": {
+            "label": "Nhỏ"
+          },
+          "options__3": {
+            "label": "Trung bình"
+          },
+          "options__4": {
+            "label": "Lớn"
+          }
+        },
+        "slider_visual": {
+          "label": "Kiểu phân trang",
+          "options__1": {
+            "label": "Bộ đếm"
+          },
+          "options__2": {
+            "label": "Chấm"
+          },
+          "options__3": {
+            "label": "Số"
+          }
+        },
+        "heading_size": {
+          "label": "Cỡ phông chữ tiêu đề",
+          "options__1": {
+            "label": "Trung bình"
+          },
+          "options__2": {
+            "label": "Lớn"
+          }
+        },
+        "box_align": {
+          "label": "Vị trí nội dung trên màn hình máy tính để bàn",
+          "options__1": {
+            "label": "Trên cùng bên trái"
+          },
+          "options__2": {
+            "label": "Trên cùng ở giữa"
+          },
+          "options__3": {
+            "label": "Trên cùng bên phải"
+          },
+          "options__4": {
+            "label": "Ở giữa bên trái"
+          },
+          "options__5": {
+            "label": "Chính giữa"
+          },
+          "options__6": {
+            "label": "Ở giữa bên phải"
+          },
+          "options__7": {
+            "label": "Dưới cùng bên trái"
+          },
+          "options__8": {
+            "label": "Dưới cùng ở giữa"
+          },
+          "options__9": {
+            "label": "Dưới cùng bên phải"
+          }
+        },
+        "show_text_box": {
+          "label": "Hiện vùng chứa trên máy tính để bàn"
+        },
+        "text_alignment": {
+          "label": "Căn chỉnh nội dung trên máy tính để bàn",
+          "option_1": {
+            "label": "Bên trái"
+          },
+          "option_2": {
+            "label": "Giữa"
+          },
+          "option_3": {
+            "label": "Bên phải"
+          }
+        },
+        "image_overlay_opacity": {
+          "label": "Độ chắn sáng của lớp phủ hình ảnh"
+        },
+        "auto_rotate": {
+          "label": "Tự động xoay vòng các trang chiếu"
+        },
+        "change_slides_speed": {
+          "label": "Đổi trang chiếu sau mỗi"
+        },
+        "color_scheme": {
+          "label": "Bảng màu hộp",
+          "info": "Có thể nhìn thấy khi vùng chứa hiển thị.",
+          "options__1": {
+            "label": "Điểm nhấn 1"
+          },
+          "options__2": {
+            "label": "Điểm nhấn 2"
+          },
+          "options__3": {
+            "label": "Nền 1"
+          },
+          "options__4": {
+            "label": "Nền 2"
+          },
+          "options__5": {
+            "label": "Nghịch đảo"
+          }
+        },
+        "mobile": {
+          "content": "Bố cục di động"
+        },
+        "text_alignment_mobile": {
+          "label": "Căn chỉnh nội dung trên thiết bị di động",
+          "options__1": {
+            "label": "Bên trái"
+          },
+          "options__2": {
+            "label": "Giữa"
+          },
+          "options__3": {
+            "label": "Bên phải"
+          }
+        },
+        "show_text_below": {
+          "label": "Hiển thị nội dung bên dưới hình ảnh trên thiết bị di động"
+        },
+        "accessibility": {
+          "content": "Khả năng truy cập",
+          "label": "Mô tả bản trình chiếu",
+          "info": "Mô tả bản trình chiếu cho khách hàng bằng trình đọc màn hình."
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "Trang chiếu",
+          "settings": {
+            "image": {
+              "label": "Hình ảnh"
+            },
+            "heading": {
+              "label": "Tiêu đề"
+            },
+            "subheading": {
+              "label": "Tiêu đề phụ"
+            },
+            "button_label": {
+              "label": "Nhãn nút",
+              "info": "Để trống nhãn này để ẩn nút."
+            },
+            "link": {
+              "label": "Liên kết trên nút"
+            },
+            "secondary_style": {
+              "label": "Sử dụng kiểu nút viền ngoài"
+            },
+            "heading_size": {
+              "label": "Cỡ tiêu đề",
+              "options__1": {
+                "label": "Nhỏ"
+              },
+              "options__2": {
+                "label": "Trung bình"
+              },
+              "options__3": {
+                "label": "Lớn"
+              }
+            },
+            "box_align": {
+              "label": "Vị trí nội dung trên màn hình máy tính để bàn",
+              "options__1": {
+                "label": "Trên cùng bên trái"
+              },
+              "options__2": {
+                "label": "Trên cùng ở giữa"
+              },
+              "options__3": {
+                "label": "Trên cùng bên phải"
+              },
+              "options__4": {
+                "label": "Ở giữa bên trái"
+              },
+              "options__5": {
+                "label": "Chính giữa"
+              },
+              "options__6": {
+                "label": "Ở giữa bên phải"
+              },
+              "options__7": {
+                "label": "Dưới cùng bên trái"
+              },
+              "options__8": {
+                "label": "Dưới cùng ở giữa"
+              },
+              "options__9": {
+                "label": "Dưới cùng bên phải"
+              }
+            },
+            "show_text_box": {
+              "label": "Hiện vùng chứa trên máy tính để bàn"
+            },
+            "text_alignment": {
+              "label": "Căn chỉnh nội dung trên màn hình máy tính để bàn",
+              "option_1": {
+                "label": "Bên trái"
+              },
+              "option_2": {
+                "label": "Giữa"
+              },
+              "option_3": {
+                "label": "Bên phải"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "Độ chắn sáng của lớp phủ hình ảnh"
+            },
+            "color_scheme": {
+              "info": "Có thể nhìn thấy khi vùng chứa hiển thị.",
+              "options__1": {
+                "label": "Điểm nhấn 1"
+              },
+              "options__2": {
+                "label": "Điểm nhấn 2"
+              },
+              "options__3": {
+                "label": "Nền 1"
+              },
+              "options__4": {
+                "label": "Nền 2"
+              },
+              "options__5": {
+                "label": "Nghịch đảo"
+              },
+              "label": "Bảng màu"
+            },
+            "text_alignment_mobile": {
+              "label": "Căn chỉnh nội dung trên thiết bị di động",
+              "options__1": {
+                "label": "Bên trái"
+              },
+              "options__2": {
+                "label": "Giữa"
+              },
+              "options__3": {
+                "label": "Bên phải"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "Bản trình chiếu"
       }
     }
   }
