--- a/locales/zh-CN.schema.json
+++ b/locales/zh-CN.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "第二张图片"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "顶部"
-          },
-          "options__2": {
-            "label": "居中"
-          },
-          "options__3": {
-            "label": "底部"
-          },
-          "label": "桌面文本位置"
-        },
         "color_scheme": {
           "options__1": {
             "label": "强调色 1"
@@ -729,7 +717,7 @@
             "label": "反转"
           },
           "label": "配色方案",
-          "info": "用于文本框"
+          "info": "在显示容器时可见。"
         },
         "stack_images_on_mobile": {
           "label": "在移动设备上堆叠图片"
@@ -739,7 +727,7 @@
           "info": "当勾选时，覆盖图像横幅高度设置。"
         },
         "show_text_box": {
-          "label": "在桌面上显示文本框"
+          "label": "在台式机上显示容器"
         },
         "image_overlay_opacity": {
           "label": "图片叠加不透明度"
@@ -748,7 +736,7 @@
           "content": "移动布局"
         },
         "show_text_below": {
-          "label": "在图片下方显示文本"
+          "label": "在移动设备上显示容器"
         },
         "image_height": {
           "label": "横幅高度",
@@ -762,6 +750,60 @@
             "label": "大"
           },
           "info": "若要获得最佳效果，请使用纵横比为 3:2 的图片。[了解详细信息](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "左上方"
+          },
+          "options__2": {
+            "label": "顶部居中"
+          },
+          "options__3": {
+            "label": "右上方"
+          },
+          "options__4": {
+            "label": "中间居左"
+          },
+          "options__5": {
+            "label": "中间居中"
+          },
+          "options__6": {
+            "label": "中间居右"
+          },
+          "options__7": {
+            "label": "左下方"
+          },
+          "options__8": {
+            "label": "底部居中"
+          },
+          "options__9": {
+            "label": "右下方"
+          },
+          "label": "桌面内容位置"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "左"
+          },
+          "options__2": {
+            "label": "居中"
+          },
+          "options__3": {
+            "label": "右"
+          },
+          "label": "桌面内容对齐方式"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "左"
+          },
+          "options__2": {
+            "label": "居中"
+          },
+          "options__3": {
+            "label": "右"
+          },
+          "label": "移动设备内容对齐方式"
         }
       },
       "blocks": {
@@ -786,6 +828,18 @@
           "settings": {
             "text": {
               "label": "描述"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "正文"
+              },
+              "options__2": {
+                "label": "副标题"
+              },
+              "options__3": {
+                "label": "大写"
+              },
+              "label": "文本样式"
             }
           },
           "name": "文本"
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "显示背景图片"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "顶部"
-          },
-          "options__2": {
-            "label": "居中"
-          },
-          "options__3": {
-            "label": "底部"
-          },
-          "label": "桌面文本位置"
-        },
         "show_text_box": {
-          "label": "在桌面上显示文本框"
+          "label": "在台式机上显示容器"
         },
         "image_overlay_opacity": {
           "label": "图片叠加不透明度"
@@ -1937,10 +1979,11 @@
             "label": "反转"
           },
           "label": "配色方案",
-          "info": "在显示文本框时可见"
+          "info": "在显示容器时可见"
         },
         "show_text_below": {
-          "label": "在移动设备上的图片下方显示文本。"
+          "label": "在移动设备上的图片下方显示内容。",
+          "info": "若要获得最佳效果，请使用纵横比为 16:9 的图片。[了解详细信息](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "横幅高度",
@@ -1957,6 +2000,63 @@
             "label": "大"
           },
           "info": "若要获得最佳效果，请使用纵横比为 16:9 的图片。[了解详细信息](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__4": {
+            "label": "中间居左"
+          },
+          "options__5": {
+            "label": "中间居中"
+          },
+          "options__6": {
+            "label": "中间居右"
+          },
+          "options__7": {
+            "label": "左下方"
+          },
+          "options__8": {
+            "label": "底部居中"
+          },
+          "options__9": {
+            "label": "右下方"
+          },
+          "options__1": {
+            "label": "左上方"
+          },
+          "options__2": {
+            "label": "顶部居中"
+          },
+          "options__3": {
+            "label": "右上方"
+          },
+          "label": "桌面内容位置"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "左"
+          },
+          "options__2": {
+            "label": "居中"
+          },
+          "options__3": {
+            "label": "右"
+          },
+          "label": "桌面内容对齐方式"
+        },
+        "header": {
+          "content": "移动布局"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "左"
+          },
+          "options__2": {
+            "label": "居中"
+          },
+          "options__3": {
+            "label": "右"
+          },
+          "label": "移动设备内容对齐方式"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "描述"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "正文"
+              },
+              "options__2": {
+                "label": "副标题"
+              },
+              "label": "文本样式"
             }
           }
         },
@@ -1982,6 +2091,273 @@
       },
       "presets": {
         "name": "电子邮件注册横幅"
+      }
+    },
+    "slideshow": {
+      "name": "幻灯片",
+      "settings": {
+        "layout": {
+          "label": "布局",
+          "options__1": {
+            "label": "全宽"
+          },
+          "options__2": {
+            "label": "网格"
+          }
+        },
+        "slide_height": {
+          "label": "幻灯片高度",
+          "options__1": {
+            "label": "适应第一张图片"
+          },
+          "options__2": {
+            "label": "小"
+          },
+          "options__3": {
+            "label": "中"
+          },
+          "options__4": {
+            "label": "大"
+          }
+        },
+        "slider_visual": {
+          "label": "分页样式",
+          "options__1": {
+            "label": "计数器"
+          },
+          "options__2": {
+            "label": "点"
+          },
+          "options__3": {
+            "label": "数字"
+          }
+        },
+        "heading_size": {
+          "label": "标题字体大小",
+          "options__1": {
+            "label": "中"
+          },
+          "options__2": {
+            "label": "大"
+          }
+        },
+        "box_align": {
+          "label": "桌面内容位置",
+          "options__1": {
+            "label": "左上方"
+          },
+          "options__2": {
+            "label": "顶部居中"
+          },
+          "options__3": {
+            "label": "右上方"
+          },
+          "options__4": {
+            "label": "中间居左"
+          },
+          "options__5": {
+            "label": "中间居中"
+          },
+          "options__6": {
+            "label": "中间居右"
+          },
+          "options__7": {
+            "label": "左下方"
+          },
+          "options__8": {
+            "label": "底部居中"
+          },
+          "options__9": {
+            "label": "右下方"
+          }
+        },
+        "show_text_box": {
+          "label": "在台式机上显示容器"
+        },
+        "text_alignment": {
+          "label": "台式机内容对齐方式",
+          "option_1": {
+            "label": "左"
+          },
+          "option_2": {
+            "label": "居中"
+          },
+          "option_3": {
+            "label": "右"
+          }
+        },
+        "image_overlay_opacity": {
+          "label": "图片叠加不透明度"
+        },
+        "auto_rotate": {
+          "label": "自动旋转幻灯片"
+        },
+        "change_slides_speed": {
+          "label": "幻灯片更换时间间隔"
+        },
+        "color_scheme": {
+          "label": "框配色方案",
+          "info": "在显示容器时可见。",
+          "options__1": {
+            "label": "强调色 1"
+          },
+          "options__2": {
+            "label": "强调色 2"
+          },
+          "options__3": {
+            "label": "背景 1"
+          },
+          "options__4": {
+            "label": "背景 2"
+          },
+          "options__5": {
+            "label": "反转"
+          }
+        },
+        "mobile": {
+          "content": "移动布局"
+        },
+        "text_alignment_mobile": {
+          "label": "移动设备内容对齐方式",
+          "options__1": {
+            "label": "左"
+          },
+          "options__2": {
+            "label": "居中"
+          },
+          "options__3": {
+            "label": "右"
+          }
+        },
+        "show_text_below": {
+          "label": "在移动设备上的图片下方显示内容"
+        },
+        "accessibility": {
+          "content": "辅助功能",
+          "label": "幻灯片描述",
+          "info": "为使用屏幕阅读器的客户描述幻灯片。"
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "幻灯片",
+          "settings": {
+            "image": {
+              "label": "图片"
+            },
+            "heading": {
+              "label": "标题"
+            },
+            "subheading": {
+              "label": "副标题"
+            },
+            "button_label": {
+              "label": "按钮标签",
+              "info": "将标签留空可隐藏按钮。"
+            },
+            "link": {
+              "label": "按钮链接",
+              "info": "将标签留空以隐藏按钮。"
+            },
+            "secondary_style": {
+              "label": "使用轮廓按钮样式"
+            },
+            "heading_size": {
+              "label": "标题大小",
+              "options__1": {
+                "label": "小"
+              },
+              "options__2": {
+                "label": "中"
+              },
+              "options__3": {
+                "label": "大"
+              }
+            },
+            "box_align": {
+              "label": "台式机内容位置",
+              "options__1": {
+                "label": "左上方"
+              },
+              "options__2": {
+                "label": "顶部居中"
+              },
+              "options__3": {
+                "label": "右上方"
+              },
+              "options__4": {
+                "label": "中间居左"
+              },
+              "options__5": {
+                "label": "中间居中"
+              },
+              "options__6": {
+                "label": "中间居右"
+              },
+              "options__7": {
+                "label": "左下方"
+              },
+              "options__8": {
+                "label": "底部居中"
+              },
+              "options__9": {
+                "label": "右下方"
+              }
+            },
+            "show_text_box": {
+              "label": "在台式机上显示容器"
+            },
+            "text_alignment": {
+              "label": "台式机内容对齐方式",
+              "option_1": {
+                "label": "左"
+              },
+              "option_2": {
+                "label": "居中"
+              },
+              "option_3": {
+                "label": "右"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "图片叠加不透明度"
+            },
+            "color_scheme": {
+              "label": "配色方案",
+              "info": "在显示容器时可见。",
+              "options__1": {
+                "label": "强调色 1"
+              },
+              "options__2": {
+                "label": "强调色 2"
+              },
+              "options__3": {
+                "label": "背景 1"
+              },
+              "options__4": {
+                "label": "背景 2"
+              },
+              "options__5": {
+                "label": "反转"
+              }
+            },
+            "text_alignment_mobile": {
+              "label": "移动设备内容对齐方式",
+              "options__1": {
+                "label": "左"
+              },
+              "options__2": {
+                "label": "居中"
+              },
+              "options__3": {
+                "label": "右"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "幻灯片"
       }
     }
   }
