--- a/locales/zh-TW.schema.json
+++ b/locales/zh-TW.schema.json
@@ -700,18 +700,6 @@
         "image_2": {
           "label": "第二張圖片"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "靠上"
-          },
-          "options__2": {
-            "label": "置中"
-          },
-          "options__3": {
-            "label": "靠下"
-          },
-          "label": "桌面版文字位置"
-        },
         "color_scheme": {
           "options__1": {
             "label": "色調 1"
@@ -729,7 +717,7 @@
             "label": "倒轉"
           },
           "label": "顏色配置",
-          "info": "用於文字方塊。"
+          "info": "顯示容器時可見。"
         },
         "stack_images_on_mobile": {
           "label": "在行動裝置上堆疊圖片"
@@ -739,7 +727,7 @@
           "info": "檢查時覆寫圖片橫幅高度設定。"
         },
         "show_text_box": {
-          "label": "在桌面顯示文字方塊"
+          "label": "在桌面顯示容器"
         },
         "image_overlay_opacity": {
           "label": "圖片疊加層透明度"
@@ -748,7 +736,7 @@
           "content": "行動版版面配置"
         },
         "show_text_below": {
-          "label": "將文字置於圖片下方"
+          "label": "在行動版顯示容器"
         },
         "image_height": {
           "label": "橫幅高度",
@@ -762,6 +750,60 @@
             "label": "大"
           },
           "info": "若想要獲得最佳結果，請使用外觀比例為 3:2 的圖片。[瞭解詳情](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "上方靠左"
+          },
+          "options__2": {
+            "label": "上方置中"
+          },
+          "options__3": {
+            "label": "上方靠右"
+          },
+          "options__4": {
+            "label": "中間靠左"
+          },
+          "options__5": {
+            "label": "中間置中"
+          },
+          "options__6": {
+            "label": "中間靠右"
+          },
+          "options__7": {
+            "label": "下方靠左"
+          },
+          "options__8": {
+            "label": "下方置中"
+          },
+          "options__9": {
+            "label": "下方靠右"
+          },
+          "label": "桌面版內容位置"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "靠左"
+          },
+          "options__2": {
+            "label": "置中"
+          },
+          "options__3": {
+            "label": "靠右"
+          },
+          "label": "桌面版內容對齊方式"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "靠左"
+          },
+          "options__2": {
+            "label": "置中"
+          },
+          "options__3": {
+            "label": "靠右"
+          },
+          "label": "行動版內容對齊方式"
         }
       },
       "blocks": {
@@ -786,6 +828,18 @@
           "settings": {
             "text": {
               "label": "說明"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "內文"
+              },
+              "options__2": {
+                "label": "副標題"
+              },
+              "options__3": {
+                "label": "大寫"
+              },
+              "label": "文字樣式"
             }
           },
           "name": "文字"
@@ -1902,20 +1956,8 @@
         "show_background_image": {
           "label": "顯示背景圖片"
         },
-        "desktop_text_box_position": {
-          "options__1": {
-            "label": "靠上"
-          },
-          "options__2": {
-            "label": "置中"
-          },
-          "options__3": {
-            "label": "靠下"
-          },
-          "label": "桌面版文字位置"
-        },
         "show_text_box": {
-          "label": "在桌面顯示文字方塊"
+          "label": "在桌面顯示容器"
         },
         "image_overlay_opacity": {
           "label": "圖片疊加層透明度"
@@ -1937,10 +1979,11 @@
             "label": "反轉"
           },
           "label": "顏色配置",
-          "info": "顯示文字方塊時可見"
+          "info": "顯示容器時可見"
         },
         "show_text_below": {
-          "label": "在行動版圖片下方顯示文字"
+          "label": "在行動版圖片下方顯示內容",
+          "info": "若想要獲得最佳結果，請使用寬高比為 16:9 的圖片。[瞭解詳情](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
         },
         "image_height": {
           "label": "橫幅高度",
@@ -1957,6 +2000,63 @@
             "label": "大"
           },
           "info": "若想要獲得最佳結果，請使用寬高比為 16:9 的圖片。[瞭解詳情](https://help.shopify.com/en/manual/shopify-admin/productivity-tools/image-editor#understanding-image-aspect-ratio)"
+        },
+        "desktop_content_position": {
+          "options__4": {
+            "label": "中間靠左"
+          },
+          "options__5": {
+            "label": "中間置中"
+          },
+          "options__6": {
+            "label": "中間靠右"
+          },
+          "options__7": {
+            "label": "下方靠左"
+          },
+          "options__8": {
+            "label": "下方置中"
+          },
+          "options__9": {
+            "label": "下方靠右"
+          },
+          "options__1": {
+            "label": "上方靠左"
+          },
+          "options__2": {
+            "label": "上方置中"
+          },
+          "options__3": {
+            "label": "上方靠右"
+          },
+          "label": "桌面版內容位置"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "靠左"
+          },
+          "options__2": {
+            "label": "置中"
+          },
+          "options__3": {
+            "label": "靠右"
+          },
+          "label": "桌面版內容對齊方式"
+        },
+        "header": {
+          "content": "行動版版面配置"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "靠左"
+          },
+          "options__2": {
+            "label": "置中"
+          },
+          "options__3": {
+            "label": "靠右"
+          },
+          "label": "行動版內容對齊方式"
         }
       },
       "blocks": {
@@ -1973,6 +2073,15 @@
           "settings": {
             "paragraph": {
               "label": "說明"
+            },
+            "text_style": {
+              "options__1": {
+                "label": "內文"
+              },
+              "options__2": {
+                "label": "副標題"
+              },
+              "label": "文字樣式"
             }
           }
         },
@@ -1982,6 +2091,273 @@
       },
       "presets": {
         "name": "電子郵件訂閱橫幅"
+      }
+    },
+    "slideshow": {
+      "name": "素材輪播",
+      "settings": {
+        "layout": {
+          "label": "版面配置",
+          "options__1": {
+            "label": "完整寬度"
+          },
+          "options__2": {
+            "label": "網格"
+          }
+        },
+        "slide_height": {
+          "label": "投影片高度",
+          "options__1": {
+            "label": "配合第一張圖片"
+          },
+          "options__2": {
+            "label": "小"
+          },
+          "options__3": {
+            "label": "中"
+          },
+          "options__4": {
+            "label": "大"
+          }
+        },
+        "slider_visual": {
+          "label": "分頁樣式",
+          "options__1": {
+            "label": "計數器"
+          },
+          "options__2": {
+            "label": "圓點"
+          },
+          "options__3": {
+            "label": "數字"
+          }
+        },
+        "heading_size": {
+          "label": "標題字型大小",
+          "options__1": {
+            "label": "中"
+          },
+          "options__2": {
+            "label": "大"
+          }
+        },
+        "box_align": {
+          "label": "桌面版內容位置",
+          "options__1": {
+            "label": "上方靠左"
+          },
+          "options__2": {
+            "label": "上方置中"
+          },
+          "options__3": {
+            "label": "上方靠右"
+          },
+          "options__4": {
+            "label": "中間靠左"
+          },
+          "options__5": {
+            "label": "中間置中"
+          },
+          "options__6": {
+            "label": "中間靠右"
+          },
+          "options__7": {
+            "label": "下方靠左"
+          },
+          "options__8": {
+            "label": "下方置中"
+          },
+          "options__9": {
+            "label": "下方靠右"
+          }
+        },
+        "show_text_box": {
+          "label": "在桌面顯示容器"
+        },
+        "text_alignment": {
+          "label": "桌面版內容對齊方式",
+          "option_1": {
+            "label": "靠左"
+          },
+          "option_2": {
+            "label": "置中"
+          },
+          "option_3": {
+            "label": "靠右"
+          }
+        },
+        "image_overlay_opacity": {
+          "label": "圖片疊加層透明度"
+        },
+        "auto_rotate": {
+          "label": "自動旋轉投影片"
+        },
+        "change_slides_speed": {
+          "label": "每過以下時間即變更投影片"
+        },
+        "color_scheme": {
+          "label": "方框顏色配置",
+          "info": "顯示容器時可見。",
+          "options__1": {
+            "label": "色調 1"
+          },
+          "options__2": {
+            "label": "色調 2"
+          },
+          "options__3": {
+            "label": "背景 1"
+          },
+          "options__4": {
+            "label": "背景 2"
+          },
+          "options__5": {
+            "label": "反轉"
+          }
+        },
+        "mobile": {
+          "content": "行動版版面配置"
+        },
+        "text_alignment_mobile": {
+          "label": "行動版內容對齊方式",
+          "options__1": {
+            "label": "靠左"
+          },
+          "options__2": {
+            "label": "置中"
+          },
+          "options__3": {
+            "label": "靠右"
+          }
+        },
+        "show_text_below": {
+          "label": "在行動版圖片下方顯示內容"
+        },
+        "accessibility": {
+          "content": "無障礙功能",
+          "label": "素材輪播說明",
+          "info": "為使用螢幕助讀程式的顧客說明該素材輪播。"
+        }
+      },
+      "blocks": {
+        "slide": {
+          "name": "投影片",
+          "settings": {
+            "image": {
+              "label": "圖片"
+            },
+            "heading": {
+              "label": "標題"
+            },
+            "subheading": {
+              "label": "子標題"
+            },
+            "button_label": {
+              "label": "按鈕標籤",
+              "info": "將標籤留白以隱藏按鈕。"
+            },
+            "link": {
+              "label": "按鈕連結",
+              "info": "將標籤留白以隱藏按鈕。"
+            },
+            "secondary_style": {
+              "label": "使用外框按鈕樣式"
+            },
+            "heading_size": {
+              "label": "標題大小",
+              "options__1": {
+                "label": "小"
+              },
+              "options__2": {
+                "label": "中"
+              },
+              "options__3": {
+                "label": "大"
+              }
+            },
+            "box_align": {
+              "label": "桌面版內容位置",
+              "options__1": {
+                "label": "上方靠左"
+              },
+              "options__2": {
+                "label": "上方置中"
+              },
+              "options__3": {
+                "label": "上方靠右"
+              },
+              "options__4": {
+                "label": "中間靠左"
+              },
+              "options__5": {
+                "label": "中間置中"
+              },
+              "options__6": {
+                "label": "中間靠右"
+              },
+              "options__7": {
+                "label": "下方靠左"
+              },
+              "options__8": {
+                "label": "下方置中"
+              },
+              "options__9": {
+                "label": "下方靠右"
+              }
+            },
+            "show_text_box": {
+              "label": "在桌面顯示容器"
+            },
+            "text_alignment": {
+              "label": "桌面版內容對齊方式",
+              "option_1": {
+                "label": "靠左"
+              },
+              "option_2": {
+                "label": "置中"
+              },
+              "option_3": {
+                "label": "靠右"
+              }
+            },
+            "image_overlay_opacity": {
+              "label": "圖片疊加層透明度"
+            },
+            "color_scheme": {
+              "label": "顏色配置",
+              "info": "顯示容器時可見。",
+              "options__1": {
+                "label": "色調 1"
+              },
+              "options__2": {
+                "label": "色調 2"
+              },
+              "options__3": {
+                "label": "背景 1"
+              },
+              "options__4": {
+                "label": "背景 2"
+              },
+              "options__5": {
+                "label": "反轉"
+              }
+            },
+            "text_alignment_mobile": {
+              "label": "行動版內容對齊方式",
+              "options__1": {
+                "label": "靠左"
+              },
+              "options__2": {
+                "label": "置中"
+              },
+              "options__3": {
+                "label": "靠右"
+              }
+            }
+          }
+        }
+      },
+      "presets": {
+        "name": "素材輪播"
       }
     }
   }
